--- a/mod/thmod/localisation/english/ancient_relics_l_english.yml
+++ b/mod/thmod/localisation/english/ancient_relics_l_english.yml
@@ -212,7 +212,7 @@
  artifact_sell_cooldown:0 "เวลาคูลดาวน์ $artifact_sell_collector$"
  artifact_arcane_deciphering:0 "Reverse-Engineer Arcane Technology"
  artifact_arcane_deciphering_desc:0 "Have some minor artifacts broken down and examined by our scientists, to see what insights they will yield for our own research."
- artifact_arcane_deciphering_effect:0 "Break down £minor_artifacts£Minor Artifacts for random technology bonuses. Gain progress in a random tech, gain research points or gain a temporary research speed bonus.\n\nCooldown: £time£ §Y720§!"
+ artifact_arcane_deciphering_effect:0 "Break down £minor_artifacts£Minor Artifacts for random technology bonuses. Gain progress in a random tech, gain research points or gain a temporary research speed bonus.\n\nเวลาคูลดาวน์: £time£ §Y720§!"
  feature_unlock_arcane_deciphering:0 "วิศวกรรมย้อนกลับศิลปวัตถุชั้นรอง"
  feature_unlock_arcane_deciphering_desc:0 "$artifact_arcane_deciphering_effect$"
  requires_arcane_deciphering_no_cooldown:0 "$TRIGGER_FAIL$§RCannot decipher more arcane technology yet.§!"
@@ -232,7 +232,7 @@
  proclaim_superiority_desc:0 "We are the future of civilization, there is nothing we can learn from the past."
  artifact_find_military_applications:0 "Find Military Applications"
  artifact_find_military_applications_desc:0 "Attempt to find military applications for minor artifacts."
- artifact_find_military_applications_effect:1 "Break down £minor_artifacts£Minor Artifacts for various military bonuses.\n\nPerforming this will prevent you from seeking peaceful applications for a time.\n\nCooldown: £time£ §Y900§!"
+ artifact_find_military_applications_effect:1 "Break down £minor_artifacts£Minor Artifacts for various military bonuses.\n\nPerforming this will prevent you from seeking peaceful applications for a time.\n\nเวลาคูลดาวน์: £time£ §Y900§!"
  artifact_find_military_applications_no_cooldown:0 "$TRIGGER_FAIL$§RCannot find more peaceful or military applications yet.§!"
  artifact_find_military_application_army:0 "Combat Drugs"
  artifact_find_military_application_army_desc:0 "Your soldiers are stronger, more aggressive, and terrifying, but a bit less careful."
@@ -267,9 +267,9 @@
  artifact_lgate_clue_desc:0 "We should be able to piece together more of the mysteries surrounding the L-Gates using these artifacts."
  artifact_lgate_clue_effect:0 "เวลาคูลดาวน์: £time£ §Y3600§!"
  artifact_lgate_insight_cooldown:0 "เวลาคูลดาวน์ $artifact_lgate_clue$"
- artifact_precursor_clue:0 "Discover Precursor Insight"
+ artifact_precursor_clue:0 "ค้นพบข้อมูลเชิงลึกจักรวรรดิแรกเริ่ม"
  artifact_precursor_clue_desc:0 "We should be able to track down the location of a precursor site using these artifacts."
- artifact_precursor_clue_effect:0 "Learn the location of a precursor site.\n\nCooldown: £time£ §Y1800§!"
+ artifact_precursor_clue_effect:0 "เรียนรู้ที่ตั้งของจักรวรรดิแรกเริ่ม\n\nคูลดาวน์: £time£ §Y1800§!"
  artifact_precursor_insight_cooldown:0 "เวลาคูลดาวน์ $artifact_precursor_clue$"
  artifact_action_locked:0 "§L??????§!"
  artifact_action_locked_desc:0 "There must be something more we can do with our £minor_artifacts£Minor Artifacts."
