--- a/mod/thmod/localisation/english/apocalypse_l_english.yml
+++ b/mod/thmod/localisation/english/apocalypse_l_english.yml
@@ -232,8 +232,8 @@
  requires_curator_agreement:0 "§RRequires a §YDiplomatic Agreement§! with the local Curator Enclave.§!"
  requires_artist_agreement:0 "§RRequires a §YDiplomatic Agreement§! with the local Artisan Enclave.§!"
  requires_artisans:0 "§RRequires an §YArtisan Troupe Enclave§! in the system.§!"
- requires_technology_gateway_activation:0 "$TRIGGER_FAIL$Requires technology £physics£ §Y$tech_gateway_activation$§!."
- requires_technology_gateway_construction:0 "$TRIGGER_FAIL$Requires technology £physics£ §Y$tech_gateway_construction$§!."
+ requires_technology_gateway_activation:0 "$TRIGGER_FAIL$ต้องใช้เทคโนโลยี £physics£ §Y$tech_gateway_activation$§!"
+ requires_technology_gateway_construction:0 "$TRIGGER_FAIL$ต้องใช้เทคโนโลยี £physics£ §Y$tech_gateway_construction$§!"
  NAVY_SIZE_STARBASES_TITLE:0 "From Starbases"
  TECH_UNLOCK_STARBASE_MODULE:0 "§Hปลดล็อกโมดูลสถานีอวกาศ:§! $NAME$"
  TECH_UNLOCK_STARBASE_BUILDING:0 "§Hปลดล็อกสิ่งปลูกสร้างบนสถานีอวกาศ:§! $NAME$"
