--- a/mod/thmod/localisation/english/distant_stars_l_english.yml
+++ b/mod/thmod/localisation/english/distant_stars_l_english.yml
@@ -801,7 +801,7 @@
  trait_limited_regeneration_desc:0 "§LThis species is has been modified to heal faster, making them more dangerous in battle and somewhat longer-lived in general.§!"
  SCAVENGER_SECONDARY_WEAPON:0 "$STRANGE_COMPONENTS_DESC$"
  SCAVENGER_MAIN_WEAPON:0 "Scrap Launcher"
- tech_nanite_repair_system:0 "ระบบการซ่อมด้วยนาโนไนต์"
+ tech_nanite_repair_system:0 "ระบบการซ่อมด้วยนาไนต์"
  tech_nanite_repair_system_desc:0 "A highly effective hull auto-repair system comprised of billions of microscopic nanomachines was found among the smoking remains of the Scavenger, and has been repurposed for our uses. Whether the Scavenger pilfered this system from an ancient derelict, or was originally constructed with it remains unknown."
  tech_neuroregeneration:0 "วิศวกรรมเนื้อเยื่อประสาท"
  tech_neuroregeneration_desc:0 "When tailored to a species' genome, this form of tissue engineering has intensive neuroregenerative properties, significantly increasing the development of neurons, axons, and synapses in its recipient."
@@ -1516,9 +1516,9 @@
  d_yurantic_deposit:0 "$d_yuranic_deposit$"
  tech_mine_yurantic:0 "$tech_mine_yuranic$"
  tech_mine_yurantic_desc:0 "$tech_mine_yuranic_desc$"
- sr_aldar:0 "Aldar Crystals"
+ sr_aldar:0 "ผลึกอัลดาร์"
  sr_aldar_desc:0 "Chipping an Aldar crystal causes the resulting splinter to expand and harden with explosive speed, making it an ideal material for fragmentation matrices in explosive munitions."
- tech_mine_aldar:0 "Aldar Polishing"
+ tech_mine_aldar:0 "การขัดแต่งแร่อัลดาร์"
  tech_mine_aldar_desc:0 "Volatile Aldar is only found laced in more common ores. Successfully extracting Aldar crystals from these mineral matrices - without sustaining significant damage to equipment and operators - requires advanced auto-tactile machinery."
  d_neutronium_deposit_1:1 "Neutronium Ore discovered"
  d_teldar_deposit_1:1 "Teldar Crystals discovered"
@@ -2082,9 +2082,9 @@
  tr_supremacy_above_the_fray_terminator:0 "Decided in a Microsecond"
  tr_supremacy_above_the_fray_terminator_desc:0 "$tr_supremacy_above_the_fray_desc$"
  tr_supremacy_above_the_fray_terminator_delayed:0 "The amount of decision-making cycles wasted by organics on their chaotic, nonessential impulses is beyond measurement. We have eliminated the latency between purpose, thought, and action. We act as one unified system, a weapon capable of pulling its own trigger."
- tech_databank_uplinks_hive_mind:0 "Collective Contemplation"
+ tech_databank_uplinks_hive_mind:0 "การไตร่ตรองร่วมกัน"
  tech_databank_uplinks_desc_hive_mind:0 "A novel new use for explorator drones has been found: by keeping them in orbit and amplifying their mindlink planet-wide, new speculative paths of discovery are revealed. Even the feeble synapses of billions of worker drones, taken together, have a cumulative effect."
- tech_improved_databank_uplinks_hive_mind:0 "Deeper Collective Contemplation"
+ tech_improved_databank_uplinks_hive_mind:0 "การไตร่ตรองร่วมกันขั้นลึก"
  tech_improved_databank_uplinks_desc_hive_mind:0 "Prolonged exposure to explorator mindlinks is inducing synergetic effects in the synapses of worker drones."
  KET_HOSTILE_GREETING:0 "§HKssk!§! Speak quick, [From.GetSpeciesName]. Patience is not one of our virtues."
  KET_NEUTRAL_GREETING:0 "You have words to speak? The Far-Minds listen, [From.GetSpeciesNamePlural]."
