--- a/mod/thmod/localisation/english/event_chains_l_english.yml
+++ b/mod/thmod/localisation/english/event_chains_l_english.yml
@@ -10,27 +10,27 @@
  subterranean_civilization_chain_desc:0 "An underground alien civilization on [Root.GetName] is tunneling towards our colony on the surface. Their numbers and intentions are unknown to us, and they could be a significant threat."
  abandoned_terraforming_chain_title:0 "Abandoned Terraforming Project"
  abandoned_terraforming_chain_desc:0 "[Root.GetName] was partly terraformed by someone thousands of years ago, but the process was interrupted for unknown reasons. The result is a highly unstable climate system and biosphere. We have located the abandoned terraforming equipment, and must decide what should be done with it."
- vultaum_chain_title:0 "Precursors - The Vultaum"
+ vultaum_chain_title:0 "จักรวรรดิแรกเริ่ม - Vultaum"
  vultaum_chain_desc:0 "We have recovered artifacts from the Vultaum Star Assembly. They were an alien civilization that was active approximately 12 million years ago. Though their exact appearance has been lost in the mists of time, we have deduced from their ruins that they were worm-like annelids, roughly three to four meters in length. They seem to have communicated with each other primarily through vibrations carried along their segmented bodies.\n\nIf we can find enough relics from their civilization, it may be possible to pinpoint the location of their home system."
  vultaum_artifacts:0 "เก็บกู้สิ่งประดิษฐ์ Vultaum ไปแล้ว"
  vultaum_homeworld_chain_title:0 "The Vultaum Home System"
  vultaum_homeworld_chain_desc:0 "We have discovered the long lost location of the Vultaum home system. An expedition must be dispatched there as soon as possible, before someone else uncover their secrets!"
- yuht_chain_title:0 "Precursors - The Yuht"
+ yuht_chain_title:0 "จักรวรรดิแรกเริ่ม - Yuht"
  yuht_chain_desc:0 "We have recovered artifacts from the Yuht Empire. They were an alien civilization that inhabited a portion of the galaxy roughly six million years ago. Physically the Yuht were very large and flat arthropod analogues. A single individual could reach a length of nearly a hundred meters as an adult, and it was apparently exceedingly rare for more than two or three Yuht to travel aboard the same starship.\n\nIf we can find enough relics from their civilization, it may be possible to pinpoint the location of their home system."
  yuht_artifacts:0 "เก็บกู้สิ่งประดิษฐ์ Yuht ไปแล้ว"
  yuht_homeworld_chain_title:0 "The Yuht Home System"
  yuht_homeworld_chain_desc:0 "We have discovered the long lost location of the Yuht home system. An expedition must be dispatched there as soon as possible, before someone else uncover their secrets!"
- first_league_chain_title:0 "Precursors - The First League"
+ first_league_chain_title:0 "จักรวรรดิแรกเริ่ม - First League"
  first_league_chain_desc:0 "We have recovered artifacts from the First League. They were a large confederation of alien races that co-existed in relative peace roughly two million years ago. The First League's borders may have expanded to cover a significant portion of the galaxy before its eventual collapse.\n\nIf we can find enough relics from their civilization, it may be possible to pinpoint the location of their home system."
  first_league_artifacts:0 "เก็บกู้สิ่งประดิษฐ์ First League ไปแล้ว"
  first_league_homeworld_chain_title:0 "The First League Capital System"
  first_league_homeworld_chain_desc:0 "We have discovered the long lost location of the First League capital system, where their Great Senate was based. An expedition must be dispatched there as soon as possible, before someone else uncover their secrets!"
- irassian_chain_title:0 "Precursors - The Irassians"
+ irassian_chain_title:0 "จักรวรรดิแรกเริ่ม - Irassians"
  irassian_chain_desc:0 "We have recovered artifacts from the Irassian Concordat. They were an interstellar power that held sway over a portion of the galaxy a little over a million years ago. The six-limbed mammalian Irassians had unusually weak immune systems that made them especially vulnerable to alien diseases. Some sources claim the Irassians were rendered extinct by the Javorian Pox, a devastating plague that swept across their empire.\n\nIf we can find enough relics from their civilization, it may be possible to pinpoint the location of their home system."
  irassian_artifacts:0 "เก็บกู้สิ่งประดิษฐ์ Irassian ไปแล้ว"
  irassian_homeworld_chain_title:0 "The Irassian Home System"
  irassian_homeworld_chain_desc:0 "We have discovered the long lost location of the Irassian home system. An expedition must be dispatched there as soon as possible, before someone else uncover their secrets!"
- cybrex_chain_title:0 "Precursors - The Cybrex"
+ cybrex_chain_title:0 "จักรวรรดิแรกเริ่ม - Cybrex"
  cybrex_chain_desc:0 "We have recovered artifacts from the Cybrex on [From.GetName]. They were a linked machine consciousness that controlled this portion of the galaxy some 600,000 years ago. Their origins and exact nature are shrouded in mystery, but it is known that they launched a crusade against all sapient organic life that lasted centuries and left trillions dead.\n\nIf we can find enough relics from their civilization, it may be possible to pinpoint the location of their home system."
  cybrex_artifacts:0 "เก็บกู้สิ่งประดิษฐ์ Cybrex ไปแล้ว"
  cybrex_homeworld_chain_title:0 "The Cybrex Home System"
