--- a/mod/thmod/localisation/english/events_l_english.yml
+++ b/mod/thmod/localisation/english/events_l_english.yml
@@ -1316,7 +1316,7 @@
  precursor.2102.desc.b:0 "Our survey of this intriguing ring world has revealed that it was constructed by some kind of machine civilization known as the "Cybrex"... but unfortunately, we have been able to learn little else. Other explorers have already scoured this system of anything valuable."
  precursor.2200.name:0 "Living Metal"
  precursor.2200.desc:0 "As Science Officer §Y[Root.GetLeaderName]§! reports [RogueLeader.GetHerHis] findings about the immense ring world in the §Y[From.GetStarName]§! system [RogueLeader.GetSheHe] can barely contain [RogueLeader.GetHerHis] awe. The immensity of the rings are beyond our comprehension, the time required to construct even one of the sections are far beyond us.\n\nThe scans reveal a rare new resource we've never encountered before, a living metal, which is abundant on the rings. This material might be one of the reasons the ring's creators could construct it in the first place. Research this technology might bring us closer to their knowledge."
- precursor.301.name:0 "การค้นพบผู้มาก่อน (Precursor)"
+ precursor.301.name:0 "การค้นพบจักรวรรดิแรกเริ่ม (ประถมจักรวรรดิ)"
  precursor.301.a.desc:0 "Intercepted communications from a group of independent prospectors indicate that they recently found something relating to an ancient Precursor civilization on §H[precursor_planet.GetName]§!. Superstition compelled them to leave the [precursor_planet.GetPlanetMoon] alone, so whatever they discovered must still be there."
  precursor.301.b.desc:0 "Several merchant ships passing in the vicinity of §H[precursor_planet.GetName]§! have independently of each other reported anomalous readings coming from the direction of the [precursor_planet.GetPlanetMoon]. After studying these readings, experts on [Root.Capital.GetName] believe they may be indicative of ancient Precursor activity."
  precursor.301.c.desc:0 "Authorities on [Root.Capital.GetName] recently exposed a large smuggling ring, and many arrests have been made. In an attempt to bargain for leniency, one of the smuggler captains gave us the coordinates of a [precursor_planet.GetPlanetMoon] that supposedly contains remnants of an ancient Precursor civilization."
@@ -1369,7 +1369,7 @@
  precursor.313.desc:0 "I... we... the [artifact_seller.GetName] will of course gladly donate the artifact to the [Root.GetName], in the interest of fostering amicable relations between our two star nations."
  precursor.313.d:0 "A wise decision."
  opinion_threatened_artifact:0 "Threatened Us"
- purchase_artifact:0 "เราซื้อสิ่งประดิษฐ์ของผู้มาก่อน (Precursor) จาก [artifact_seller.GetName]\n\n"
+ purchase_artifact:0 "เราซื้อสิ่งประดิษฐ์ของประถมจักรวรรดิ (พรีเคอร์เซอร์) จาก [artifact_seller.GetName]\n\n"
  coerce_artifact:0 "We attempt to coerce the [artifact_seller.GetName] into giving us their Precursor artifact."
  precursor.314.desc:0 "Greetings, [Root.GetSpeciesAdj] friends.\n\nA recent [artifact_giver.GetSpeciesAdj] archaeological expedition on one of our planets uncovered several artifacts believed to have originated in the ancient [Root.GetPrecursorCiv] Precursor civilization.\n\nThe artifacts are currently being displayed in a museum on [artifact_giver.Capital.GetName], but in honor of the friendship between our two great empires, the [artifact_giver.GetName] would like to donate one of the pieces to the [Root.GetName]. Arrangements have already been made to transport the artifact to [Root.Capital.GetName]."
  precursor.314.a:0 "Thank you for this gift."
