--- a/mod/thmod/localisation/english/federations_anniversary_l_english.yml
+++ b/mod/thmod/localisation/english/federations_anniversary_l_english.yml
@@ -319,7 +319,7 @@
  resolution_category_space_fauna_tiyanki:1 "สัตว์อวกาศ"
  resolution_tiyanki_conservation_act:0 "กฎหมายอนุรักษ์ Tiyanki"
  resolution_tiyanki_conservation_act_desc:0 "Tiyanki เป็นรูปแบบเฉพาะของชีวิตในอวกาศและต้องได้รับการปกป้องจากผู้ที่จะทำอันตราย"
- resolution_tiyanki_conservation_act_tooltip:0 "อาณาจักรใดๆที่สังหาร §YTiyanki§! จะได้รับการพิจารณาเรื่อง §Rการละเมิดกฎหมายกาแลกติก§!"
+ resolution_tiyanki_conservation_act_tooltip:0 "อาณาจักรใดๆที่สังหาร §YTiyanki§! จะได้รับการพิจารณาเรื่อง §Rการละเมิดกฎหมายกาแล็กติก§!"
  resolution_repeal_tiyanki_conservation_act:0 "§Rยกเลิก $resolution_tiyanki_conservation_act$§!"
  resolution_repeal_tiyanki_conservation_act_desc:0 "It is not for the Galactic Community to decide how its members deal with the Tiyanki."
  resolution_repeal_tiyanki_conservation_act_effect_success:0 "ยกเลิก §Y$resolution_tiyanki_conservation_act$§!"
@@ -348,7 +348,7 @@
  resolution_galactic_market_allow_sentient_slave_trade:0 "ให้ค้าทาสที่ที่เป็นจักรกลที่มีความรู้สึกได้"
  resolution_galactic_market_allow_sentient_slave_trade_desc:0 "Creators should have the right to do what they wish with their property. This includes objects that imitate sentience. We should repeal the misguided ban on the sale of these so-called 'sentient' machines."
  resolution_galactic_market_allow_sentient_slave_trade_effect_success:0 "Sentient mechanical beings can once again be sold on the Slave Market."
- resolution_galactic_market_relocate:0 "ย้ายตลาดกาแลกติก"
+ resolution_galactic_market_relocate:0 "ย้ายตลาดกาแล็กติก"
  resolution_galactic_market_relocate_desc:0 "We question whether the Galactic Market is best served by its current leader. We should initiate a new competition to determine who should lead it."
  resolution_galactic_market_relocate_effect_success:0 "Begins the Galactic Market leadership competition again."
  resolution_galactic_market_relocate_trigger_fail:0 "The Galactic Market has been relocated too recently."
