--- a/mod/thmod/localisation/english/megacorp_l_english.yml
+++ b/mod/thmod/localisation/english/megacorp_l_english.yml
@@ -643,8 +643,8 @@
  mod_pop_cat_xeno_ward_political_power:0 "อำนาจทางการเมือง $pop_cat_xeno_ward$"
  mod_pop_cat_xeno_ward_happiness:0 "ความสุข $pop_cat_xeno_ward$"
  pop_cat_xeno_ward_desc:0 "Endangered primitive species that are kept preserved in a perfect replica of their natural environment."
- pop_cat_precursor:0 "ผู้มาก่อน"
- pop_cat_precursor_plural:0 "ผู้มาก่อน"
+ pop_cat_precursor:0 "จักรวรรดิแรกเริ่ม"
+ pop_cat_precursor_plural:0 "จักรวรรดิแรกเริ่ม"
  mod_pop_cat_precursor_political_power:0 "อำนาจทางการเมือง $pop_cat_precursor$"
  mod_pop_cat_precursor_happiness:0 "ความสุข $pop_cat_precursor$"
  pop_cat_precursor_desc:0 "The dominant species in an ancient Fallen Empire, these precursors live among technological marvels that the younger races can only dream of."
@@ -1407,7 +1407,7 @@
  mod_planet_jobs_robotic_produces_mult:0 "ผลผลิตของหุ่นยนต์"
  mod_planet_jobs_consumer_goods_produces_mult:0 "£consumer_goods£ $consumer_goods$จาก £job£ งาน"
  mod_planet_jobs_alloys_produces_mult:0 "£alloys£ $alloys$จาก £job£ งาน"
- mod_country_produces_mult:0 "Monthly Resources"
+ mod_country_produces_mult:0 "ทรัพยากรรายเดือน"
  mod_country_food_produces_mult:0 "$food$รายเดือน"
  mod_country_food_produces_add:0 "$mod_country_food_produces_mult$"
  mod_country_unity_produces_mult:0 "$unity$รายเดือน"
@@ -2355,7 +2355,7 @@
  planet_pops:0 "ประชากร"
  pop_category_robot:0 "หุ่นยนต์ทาสรับใช้"
  pop_category_xeno_ward:0 "มาตรฐานการครองชีพดึกดำบรรพ์"
- pop_category_precursor:0 "มาตรฐานความเป็นอยู่ของผู้มาก่อน"
+ pop_category_precursor:0 "มาตรฐานความเป็นอยู่แบบจักรวรรดิแรกเริ่ม"
  pop_category_pre_sapients:0 "ก่อนเซเปียนส์"
  pop_category_drones:0 "โดรน"
  pop_category_workers:0 "มาตรฐานความเป็นอยู่ $pop_cat_worker$"
@@ -3335,7 +3335,7 @@
  dportal_trade_increases_gestalt_tooltip:0 "The £amenities£ and £energy£ output of §Y$job_dimensional_portal_researcher_gestalt_plural$§! increases."
  dportal_trade_reduces_tooltip:0 "The £amenities£ and £trade_value£ output of §Y$job_dimensional_portal_researcher_plural$§! decreases."
  dportal_trade_reduces_gestalt_tooltip:0 "The £amenities£ and £energy£ output of §Y$job_dimensional_portal_researcher_gestalt_plural$§! decreases."
- action.96.name:0 "§Hกำเนิดตลาดกาแลกติก§!"
+ action.96.name:0 "§Hกำเนิดตลาดกาแล็กติก§!"
  action.96.desc:0 "De facto galactic trade, unbound by the performance of international diplomacy, has existed since we first discovered that we are not alone in the universe. As new borders are discovered and old ones redrawn across the galaxy, galactic leaders agree that it is time to §Ylegitimize this commercial forum§! so that all may benefit.\n\nIn the coming years, independent traders and government agencies will be looking to establish a quasi-centralized hub for galactic commerce. We would surely benefit were this hub to fall within [Root.GetAdj] space, so we can choose to §Ypromote one of our worlds§! for this purpose."
  action.96.desc.corp:1 "The customers, clients, and rubes of the galaxy at long last seem ready to accept a quasi-centralized platform for deregulated, mid-scale international commerce.\n\nWe can §Ypromote one of our worlds§! to play host to this commercial hub, to maximize potential revenue."
  action.96.desc.phobe:0 "It is a regrettable fact that we have consistently failed to quash the illicit §Ytrade with the xenos§!. Equally regrettable is that the economic benefits of a largely anonymous forum for trade decoupled from international relations cannot be denied.\n\nIn the coming years, independent traders and government agencies will be looking to establish a quasi-centralized hub for galactic commerce. The economic gains from playing host to such a nexus might well outweigh the burden of harboring alien goods, so we can choose to §Ypromote one of our worlds§! for this purpose."
@@ -3346,17 +3346,17 @@
  action.97.desc:0 "$action.96.desc$"
  action.97.desc.corp:0 "$action.96.desc.corp$"
  action.97.desc.phobe:0 "$action.96.desc.phobe$"
- enable_decision_market_nomination:0 "§Hปลดล็อกการตัดสินใจ:§! เสนอชื่อเป็นฮับของตลาดกาแลกติก"
- action.99.name:0 "§Hตลาดกาแลกติก§!: ก่อตั้งขึ้นใน [market_founder_planet.GetStarName]"
+ enable_decision_market_nomination:0 "§Hปลดล็อกการตัดสินใจ:§! เสนอชื่อเป็นฮับของตลาดกาแล็กติก"
+ action.99.name:0 "§Hตลาดกาแล็กติก§!: ก่อตั้งขึ้นใน [market_founder_planet.GetStarName]"
  action.99.desc:0 "Our marketing campaign on [market_founder_planet.GetName] has borne fruit, and the market-powers-that-be have seen fit to centralize much of their activity within the [market_founder_planet.GetStarName] system!"
  action.99.desc.phobe:0 "$action.99.desc$"
- action.101.name:0 "§Hตลาดกาแลกติก§!: ได้จัดตั้งขึ้นแล้ว"
+ action.101.name:0 "§Hตลาดกาแล็กติก§!: ได้จัดตั้งขึ้นแล้ว"
  action.101.desc:1 "The center of galactic commerce has manifested in the §Y[galactic_market_station.solar_system.GetName]§! system, within the borders of the [From.GetName]. The [From.GetAdj] administration has officially legitimized this marketplace, where resources can be bought and sold through unaffiliated third parties."
  action.101.desc.phobe:0 "The dubious xenos of the §Y[From.GetName]§! have established a marketplace for the trade of alien goods. While we are naturally loath to take part in this exchange, the option is available to us."
  action.101.desc.homicidal:0 "$action.96.desc.homicidal$"
- action.103.name:0 "§Hตลาดกาแลกติก§!: ย้ายสถานีแล้ว"
+ action.103.name:0 "§Hตลาดกาแล็กติก§!: ย้ายสถานีแล้ว"
  action.103.desc:0 "The galactic merchant community, following loss of contact with their former hub, have chosen to establish a new station within our borders."
- action.106.name:0 "§Hตลาดกาแลกติก§!"
+ action.106.name:0 "§Hตลาดกาแล็กติก§!"
  action.106.desc:0 "Through our newly-established contacts, we have gained access to a galactic marketplace for the purchase and sale of resources. This will surely be a great boon to the [Root.GetAdj] economy."
  action.106.desc.phobe:0 "We have learned of a galactic marketplace for the trade of alien goods, established by the loathsome xenos. While we are naturally reluctant to take part in this exchange, the option is now available to us."
  action.106.desc.homicidal:0 "$action.96.desc.homicidal$"
@@ -3364,9 +3364,9 @@
  distar.305.rare_crystals:0 "The [Root.GetName] has discovered a previously unknown strategic resource on [FromFrom.GetName], dubbed §H$rare_crystals$§!. The crystals lend themselves well to both high-end electronics as well as laser weapons systems, thanks to their spectacular refractive properties."
  distar.305.exotic_gases:0 "The [Root.GetName] has discovered a previously unknown strategic resource on [FromFrom.GetName], dubbed §H$exotic_gases$§!. These gases have a number of tactical and even recreational uses."
  distar.305.volatile_motes:0 "The [Root.GetName] has discovered a previously unknown strategic resource on [FromFrom.GetName], dubbed §H$volatile_motes$§!. These particles produce an explosive amount of kinetic force when chemically activated, and are supposedly very spicy when used in cooking."
- decision_market_nomination:0 "เสนอชื่อเพื่อเป็นฮับของตลาดกาแลกติก"
+ decision_market_nomination:0 "เสนอชื่อเพื่อเป็นฮับของตลาดกาแล็กติก"
  decision_market_nomination_effects:0 "ใช้ §Yระดับความสามารถในการแข่งขันของตลาดกลาง§! ไปยังดาวเคราะห์ตามสภาพในท้องที่ ยิ่งมีระดับที่ดีเท่าไหร่ ก็ยิ่งมีโอกาสมากขึ้นที่ดาวเคราะห์จะได้เป็นเจ้าภาพของ §Hตลาดกาแลกติก§! ในอนาคต"
- decision_market_nomination_effects_short:0 "เสนอชื่อดาวดวงนี้ให้เป็นฮับการค้าการค้าสำหรับการรวมตัวของ §Hตลาดกาแลกติก§!"
+ decision_market_nomination_effects_short:0 "เสนอชื่อดาวดวงนี้ให้เป็นฮับการค้าการค้าสำหรับการรวมตัวของ §Hตลาดกาแล็กติก§!"
  decision_market_nomination_desc:0 "Being nexus of galactic trade is a position as prestigious as it is profitable. The market is fickle, but with enough incentives we might be able to lure the big players to establish themselves on this planet."
  decision_revoke_market_nomination:0 "ถอนการเสนอชื่อ"
  decision_revoke_market_nomination_effect:0 "§Hการลงทุนก่อนหน้านี้จะไม่ได้รับเงินคืน§!"
@@ -3483,7 +3483,7 @@
  wg_seize_branch_office_effects:1 "§Y[Root.GetName]§! takes control of the planetary Branch Office\n"
  wg_expel_corp_subject_status_quo_effects:1 "All Branch Offices owned by the §Y[From.GetName]§! in the §Y[Root.GetName]§! (and §Y[Root.GetAdj] Subjects§!' colonies) are closed.\n§Y[From.GetName]§! receives £energy£ §Y1000§! for each closed Branch Office."
  wg_expel_corp_subject_effects:1 "All Branch Offices owned by the §Y[From.GetName]§! in the §Y[Root.GetName]§! (and §Y[Root.GetAdj] Subjects§!' colonies) are closed.\n§Y[Root.GetName]§! receives £energy£ §Y1000§! for each closed Branch Office."
- market_founding_chain_title:0 "ก่อตั้งตลาดกาแลกติก"
+ market_founding_chain_title:0 "ก่อตั้งตลาดกาแล็กติก"
  market_founding_chain_desc:0 "The establishment of an international commercial forum is nigh, and whoever controls the centralized exchange station stands to benefit.\n\nShould we desire to compete for the title of market host, we have a few years to use §HDecisions§! to nominate one of our worlds to tether the $galactic_market_station$."
  casus_belli_cb_steal_galatron:1 "อ้างสิทธิ์ในกาลาตรอน"
  war_goal_wg_steal_galatron:0 "ยึดกาลาตรอน"
@@ -3567,8 +3567,8 @@
  NAME_Schooner:0 "Caravan Schooner"
  NAME_Yojimbo:0 "Yojimbo Armed Escort"
  NAME_Gunslinger:0 "Gunslinger Armed Escort"
- galactic_market_station:0 "สถานีตลาดกาแลกติก"
- galactic_market_station_desc:0 "การบริหารหลายๆอย่างของตลาดกาแลกติกตั้งอยู่ในสถานีแห่งนี้"
+ galactic_market_station:0 "สถานีตลาดกาแล็กติก"
+ galactic_market_station_desc:0 "การบริหารหลายๆอย่างของตลาดกาแล็กติกตั้งอยู่ในสถานีแห่งนี้"
  planet_pops_organics_food_upkeep_mult:0 "£pop£ ประชากร £food£ บริโภคอาหาร"
  planet_pops_organics_minerals_upkeep_mult:0 "£pop£ ประชากร £minerals£ บริโภคแร่"
  planet_pops_organics_energy_upkeep_mult:0 "£pop£ Pop £energy£ Energy Consumption"
