--- a/mod/thmod/localisation/english/modifiers_l_english.yml
+++ b/mod/thmod/localisation/english/modifiers_l_english.yml
@@ -242,7 +242,7 @@
  MOD_SHIP_FTL_WARP_RANGE_MULT:0 "ระยะการวาร์ป"
  MOD_SHIP_FTL_HYPER_RANGE_MULT:0 "ระยะของไฮเปอร์"
  MOD_SHIP_FTL_JUMPDRIVE_RANGE_MULT:0 "ระยะการจั้มไดร์ฟ"
- MOD_SHIP_FTL_WORMHOLE_RANGE_MULT:0 "ระยะทางของรูหนอน"
+ MOD_SHIP_FTL_WORMHOLE_RANGE_MULT:0 "ระยะของรูหนอน"
  MOD_SHIP_FTL_WORMHOLE_SPEED_MULT:0 "อัตราการสร้างรูหนอน"
  MOD_SHIP_FTL_WORMHOLES_PER_STATION:0 "รูหนอนที่ใช้งานได้ต่อสถานี"
  MOD_SHIP_HITPOINTS_ADD:1 "HP ยาน"
@@ -687,46 +687,46 @@
  mod_weapon_type_strike_craft_weapon_fire_rate_mult:0 "ความเร็วในการโจมตีของยานลูก"
  mod_weapon_type_strike_craft_speed_mult:0 "ความเร็วของยานลูก"
  mod_weapon_swarm_weapon_fire_rate_mult:0 "Prethoryn Swarm Weapon Attack Speed"
- vultaum_asteroid_category_research_speed_mult:0 "ความเร็วในการวิจัยสิ่งผิดปกติ (ผู้มาก่อน)"
- vultaum_asteroid_category_research_fail_risk_mult:0 "ความเสี่ยงที่ความผิดปกติจะล้มเหลว (ผู้มาก่อน)"
- vultaum_gasgiant_category_research_speed_mult:0 "ความเร็วในการวิจัยสิ่งผิดปกติ (ผู้มาก่อน)"
- vultaum_gasgiant_category_research_fail_risk_mult:0 "ความเสี่ยงที่ความผิดปกติจะเสียหาย (ผู้มาก่อน)"
- vultaum_uninhabitable_category_research_speed_mult:0 "ความเร็วในการวิจัยสิ่งผิดปกติ (ผู้มาก่อน)"
- vultaum_uninhabitable_category_research_fail_risk_mult:0 "ความเสี่ยงที่ความผิดปกติจะเสียหาย (ผู้มาก่อน)"
- vultaum_habitable_category_research_speed_mult:0 "ความเร็วในการวิจัยสิ่งผิดปกติ (ผู้มาก่อน)"
- vultaum_habitable_category_research_fail_risk_mult:0 "ความเสี่ยงที่ความผิดปกติจะเสียหาย (ผู้มาก่อน)"
- yuht_asteroid_category_research_speed_mult:0 "ความเร็วในการวิจัยสิ่งผิดปกติ (ผู้มาก่อน)"
- yuht_asteroid_category_research_fail_risk_mult:0 "ความเสี่ยงที่ความผิดปกติจะเสียหาย (ผู้มาก่อน)"
- yuht_gasgiant_category_research_speed_mult:0 "ความเร็วในการวิจัยสิ่งผิดปกติ (ผู้มาก่อน)"
- yuht_gasgiant_category_research_fail_risk_mult:0 "ความเสี่ยงที่ความผิดปกติจะเสียหาย (ผู้มาก่อน)"
- yuht_uninhabitable_category_research_speed_mult:0 "ความเร็วในการวิจัยสิ่งผิดปกติ (ผู้มาก่อน)"
- yuht_uninhabitable_category_research_fail_risk_mult:0 "ความเสี่ยงที่ความผิดปกติจะเสียหาย (ผู้มาก่อน)"
- yuht_habitable_category_research_speed_mult:0 "ความเร็วในการวิจัยสิ่งผิดปกติ (ผู้มาก่อน)"
- yuht_habitable_category_research_fail_risk_mult:0 "ความเสี่ยงที่ความผิดปกติจะเสียหาย (ผู้มาก่อน)"
- league_asteroid_category_research_speed_mult:0 "ความเร็วในการวิจัยสิ่งผิดปกติ (ผู้มาก่อน)"
- league_asteroid_category_research_fail_risk_mult:0 "ความเสี่ยงที่ความผิดปกติจะเสียหาย (ผู้มาก่อน)"
- league_gasgiant_category_research_speed_mult:0 "ความเร็วในการวิจัยสิ่งผิดปกติ (ผู้มาก่อน)"
- league_gasgiant_category_research_fail_risk_mult:0 "ความเสี่ยงที่ความผิดปกติจะเสียหาย (ผู้มาก่อน)"
- league_uninhabitable_category_research_speed_mult:0 "ความเร็วในการวิจัยสิ่งผิดปกติ (ผู้มาก่อน)"
- league_uninhabitable_category_research_fail_risk_mult:0 "ความเสี่ยงที่ความผิดปกติจะเสียหาย (ผู้มาก่อน)"
- league_habitable_category_research_speed_mult:0 "ความเร็วในการวิจัยสิ่งผิดปกติ (ผู้มาก่อน)"
- league_habitable_category_research_fail_risk_mult:0 "ความเสี่ยงที่ความผิดปกติจะเสียหาย (ผู้มาก่อน)"
- irassian_asteroid_category_research_speed_mult:0 "ความเร็วในการวิจัยสิ่งผิดปกติ (ผู้มาก่อน)"
- irassian_asteroid_category_research_fail_risk_mult:0 "ความเสี่ยงที่ความผิดปกติจะเสียหาย (ผู้มาก่อน)"
- irassian_gasgiant_category_research_speed_mult:0 "ความเร็วในการวิจัยสิ่งผิดปกติ (ผู้มาก่อน)"
- irassian_gasgiant_category_research_fail_risk_mult:0 "ความเสี่ยงที่ความผิดปกติจะเสียหาย (ผู้มาก่อน)"
- irassian_uninhabitable_category_research_speed_mult:0 "ความเร็วในการวิจัยสิ่งผิดปกติ (ผู้มาก่อน)"
- irassian_uninhabitable_category_research_fail_risk_mult:0 "ความเสี่ยงที่ความผิดปกติจะเสียหาย (ผู้มาก่อน)"
- irassian_habitable_category_research_speed_mult:0 "ความเร็วในการวิจัยสิ่งผิดปกติ (ผู้มาก่อน)"
- irassian_habitable_category_research_fail_risk_mult:0 "ความเสี่ยงที่ความผิดปกติจะเสียหาย (ผู้มาก่อน)"
- cybrex_asteroid_category_research_speed_mult:0 "ความเร็วในการวิจัยสิ่งผิดปกติ (ผู้มาก่อน)"
- cybrex_asteroid_category_research_fail_risk_mult:0 "ความเสี่ยงที่ความผิดปกติจะเสียหาย (ผู้มาก่อน)"
- cybrex_gasgiant_category_research_speed_mult:0 "ความเร็วในการวิจัยสิ่งผิดปกติ (ผู้มาก่อน)"
- cybrex_gasgiant_category_research_fail_risk_mult:0 "ความเสี่ยงที่ความผิดปกติจะเสียหาย (ผู้มาก่อน)"
- cybrex_uninhabitable_category_research_speed_mult:0 "ความเร็วในการวิจัยสิ่งผิดปกติ (ผู้มาก่อน)"
- cybrex_uninhabitable_category_research_fail_risk_mult:0 "ความเสี่ยงที่ความผิดปกติจะเสียหาย (ผู้มาก่อน)"
- cybrex_habitable_category_research_speed_mult:0 "ความเร็วในการวิจัยสิ่งผิดปกติ (ผู้มาก่อน)"
- cybrex_habitable_category_research_fail_risk_mult:0 "ความเสี่ยงที่ความผิดปกติจะเสียหาย (ผู้มาก่อน)"
+ vultaum_asteroid_category_research_speed_mult:0 "ความเร็วในการวิจัยสิ่งผิดปกติ (จักรวรรดิแรกเริ่ม)"
+ vultaum_asteroid_category_research_fail_risk_mult:0 "ความเสี่ยงที่ความผิดปกติจะล้มเหลว (จักรวรรดิแรกเริ่ม)"
+ vultaum_gasgiant_category_research_speed_mult:0 "ความเร็วในการวิจัยสิ่งผิดปกติ (จักรวรรดิแรกเริ่ม)"
+ vultaum_gasgiant_category_research_fail_risk_mult:0 "ความเสี่ยงที่ความผิดปกติจะเสียหาย (จักรวรรดิแรกเริ่ม)"
+ vultaum_uninhabitable_category_research_speed_mult:0 "ความเร็วในการวิจัยสิ่งผิดปกติ (จักรวรรดิแรกเริ่ม)"
+ vultaum_uninhabitable_category_research_fail_risk_mult:0 "ความเสี่ยงที่ความผิดปกติจะเสียหาย (จักรวรรดิแรกเริ่ม)"
+ vultaum_habitable_category_research_speed_mult:0 "ความเร็วในการวิจัยสิ่งผิดปกติ (จักรวรรดิแรกเริ่ม)"
+ vultaum_habitable_category_research_fail_risk_mult:0 "ความเสี่ยงที่ความผิดปกติจะเสียหาย (จักรวรรดิแรกเริ่ม)"
+ yuht_asteroid_category_research_speed_mult:0 "ความเร็วในการวิจัยสิ่งผิดปกติ (จักรวรรดิแรกเริ่ม)"
+ yuht_asteroid_category_research_fail_risk_mult:0 "ความเสี่ยงที่ความผิดปกติจะเสียหาย (จักรวรรดิแรกเริ่ม)"
+ yuht_gasgiant_category_research_speed_mult:0 "ความเร็วในการวิจัยสิ่งผิดปกติ (จักรวรรดิแรกเริ่ม)"
+ yuht_gasgiant_category_research_fail_risk_mult:0 "ความเสี่ยงที่ความผิดปกติจะเสียหาย (จักรวรรดิแรกเริ่ม)"
+ yuht_uninhabitable_category_research_speed_mult:0 "ความเร็วในการวิจัยสิ่งผิดปกติ (จักรวรรดิแรกเริ่ม)"
+ yuht_uninhabitable_category_research_fail_risk_mult:0 "ความเสี่ยงที่ความผิดปกติจะเสียหาย (จักรวรรดิแรกเริ่ม)"
+ yuht_habitable_category_research_speed_mult:0 "ความเร็วในการวิจัยสิ่งผิดปกติ (จักรวรรดิแรกเริ่ม)"
+ yuht_habitable_category_research_fail_risk_mult:0 "ความเสี่ยงที่ความผิดปกติจะเสียหาย (จักรวรรดิแรกเริ่ม)"
+ league_asteroid_category_research_speed_mult:0 "ความเร็วในการวิจัยสิ่งผิดปกติ (จักรวรรดิแรกเริ่ม)"
+ league_asteroid_category_research_fail_risk_mult:0 "ความเสี่ยงที่ความผิดปกติจะเสียหาย (จักรวรรดิแรกเริ่ม)"
+ league_gasgiant_category_research_speed_mult:0 "ความเร็วในการวิจัยสิ่งผิดปกติ (จักรวรรดิแรกเริ่ม)"
+ league_gasgiant_category_research_fail_risk_mult:0 "ความเสี่ยงที่ความผิดปกติจะเสียหาย (จักรวรรดิแรกเริ่ม)"
+ league_uninhabitable_category_research_speed_mult:0 "ความเร็วในการวิจัยสิ่งผิดปกติ (จักรวรรดิแรกเริ่ม)"
+ league_uninhabitable_category_research_fail_risk_mult:0 "ความเสี่ยงที่ความผิดปกติจะเสียหาย (จักรวรรดิแรกเริ่ม)"
+ league_habitable_category_research_speed_mult:0 "ความเร็วในการวิจัยสิ่งผิดปกติ (จักรวรรดิแรกเริ่ม)"
+ league_habitable_category_research_fail_risk_mult:0 "ความเสี่ยงที่ความผิดปกติจะเสียหาย (จักรวรรดิแรกเริ่ม)"
+ irassian_asteroid_category_research_speed_mult:0 "ความเร็วในการวิจัยสิ่งผิดปกติ (จักรวรรดิแรกเริ่ม)"
+ irassian_asteroid_category_research_fail_risk_mult:0 "ความเสี่ยงที่ความผิดปกติจะเสียหาย (จักรวรรดิแรกเริ่ม)"
+ irassian_gasgiant_category_research_speed_mult:0 "ความเร็วในการวิจัยสิ่งผิดปกติ (จักรวรรดิแรกเริ่ม)"
+ irassian_gasgiant_category_research_fail_risk_mult:0 "ความเสี่ยงที่ความผิดปกติจะเสียหาย (จักรวรรดิแรกเริ่ม)"
+ irassian_uninhabitable_category_research_speed_mult:0 "ความเร็วในการวิจัยสิ่งผิดปกติ (จักรวรรดิแรกเริ่ม)"
+ irassian_uninhabitable_category_research_fail_risk_mult:0 "ความเสี่ยงที่ความผิดปกติจะเสียหาย (จักรวรรดิแรกเริ่ม)"
+ irassian_habitable_category_research_speed_mult:0 "ความเร็วในการวิจัยสิ่งผิดปกติ (จักรวรรดิแรกเริ่ม)"
+ irassian_habitable_category_research_fail_risk_mult:0 "ความเสี่ยงที่ความผิดปกติจะเสียหาย (จักรวรรดิแรกเริ่ม)"
+ cybrex_asteroid_category_research_speed_mult:0 "ความเร็วในการวิจัยสิ่งผิดปกติ (จักรวรรดิแรกเริ่ม)"
+ cybrex_asteroid_category_research_fail_risk_mult:0 "ความเสี่ยงที่ความผิดปกติจะเสียหาย (จักรวรรดิแรกเริ่ม)"
+ cybrex_gasgiant_category_research_speed_mult:0 "ความเร็วในการวิจัยสิ่งผิดปกติ (จักรวรรดิแรกเริ่ม)"
+ cybrex_gasgiant_category_research_fail_risk_mult:0 "ความเสี่ยงที่ความผิดปกติจะเสียหาย (จักรวรรดิแรกเริ่ม)"
+ cybrex_uninhabitable_category_research_speed_mult:0 "ความเร็วในการวิจัยสิ่งผิดปกติ (จักรวรรดิแรกเริ่ม)"
+ cybrex_uninhabitable_category_research_fail_risk_mult:0 "ความเสี่ยงที่ความผิดปกติจะเสียหาย (จักรวรรดิแรกเริ่ม)"
+ cybrex_habitable_category_research_speed_mult:0 "ความเร็วในการวิจัยสิ่งผิดปกติ (จักรวรรดิแรกเริ่ม)"
+ cybrex_habitable_category_research_fail_risk_mult:0 "ความเสี่ยงที่ความผิดปกติจะเสียหาย (จักรวรรดิแรกเริ่ม)"
  vultaum_asteroid_category_research_speed_add:0 "$vultaum_asteroid_category_research_speed_mult$"
  vultaum_gasgiant_category_research_speed_add:0 "$vultaum_gasgiant_category_research_speed_mult$"
  vultaum_uninhabitable_category_research_speed_add:0 "$vultaum_uninhabitable_category_research_speed_mult$"
@@ -802,7 +802,7 @@
  ai_strength:0 "วงจรอะไหล่สำรอง"
  ai_strength_hard:0 "$ai_strength$"
  ai_strength_insane:0 "$ai_strength$"
- nomad_strength:0 "ชนเผ่าเร่ร่อนแห่งกาแลกติก (Nomads)"
+ nomad_strength:0 "ชนเผ่าเร่ร่อนแห่งกาแล็กติก (Nomads)"
  pirate_power:0 "พลังโจรสลัด"
  cloud_power:0 "พลังคลาวด์(เมฆ)"
  enigmatic_power:0 "พลังลึกลับ"
@@ -812,7 +812,7 @@
  armistice_power:0 "พลังการหย่าศึก"
  curator_insight:0 "ข้อมูลเชิงลึกผู้ดูแลพิพิธภัณฑ์"
  curator_insight_desc:0 "The Curators have shared their knowledge with you. Although requiring extensive interpretation, this will surely advance your understanding."
- fallen_empire_gift_databanks:0 "แคชข้อมูลของผู้มาก่อน"
+ fallen_empire_gift_databanks:0 "แคชข้อมูลของจักรวรรดิแรกเริ่ม"
  fallen_empire_gift_databanks_desc:0 "เราได้รับแคชข้อมูล(ส่วนของข้อมูล)ทางวิทยาศาสตร์จาก จักรวรรดิเก่าแก่ทรงพลัง สิ่งนี้จะช่วยเพิ่มประสิทธิภาพการวิจัยของเราได้มาก"
  ship_orbit_repair:0 "การซ่อมแซมในวงโคจร"
  ship_max_damaged_effect:0 "โทษที่ได้รับจากความเสียหาย"
@@ -1328,8 +1328,8 @@
  ed_anchor_buildspeed:0 "Anchor Construction"
  shipsize_anchor_station_construction_speed_mult:0 "Anchor Construction"
  EVENT_LOCKED_FLEET:0 "§Rไม่สามารถโจมตีได้§!"
- precursor_research_speed:0 "ความเร็วในการวิจัยสิ่งผิดปกติ (ผู้มาก่อน)"
- precursor_fail_risk:0 "ความเสี่ยงที่ความผิดปกติจะล้มเหลว (ผู้มาก่อน)"
+ precursor_research_speed:0 "ความเร็วในการวิจัยสิ่งผิดปกติ (จักรวรรดิแรกเริ่ม)"
+ precursor_fail_risk:0 "ความเสี่ยงที่ความผิดปกติจะล้มเหลว (จักรวรรดิแรกเริ่ม)"
  mod_vultaum_1_cat_research_speed_mult:0 "$precursor_research_speed$"
  mod_vultaum_2_cat_research_speed_mult:0 "$precursor_research_speed$"
  mod_vultaum_3_cat_research_speed_mult:0 "$precursor_research_speed$"
