--- a/mod/thmod/localisation/english/name_lists/event_names_l_english.yml
+++ b/mod/thmod/localisation/english/name_lists/event_names_l_english.yml
@@ -123,7 +123,7 @@
  NAME_Shroud_Manifestation:0 "Shroud Manifestation"
  NAME_Skeletal_Transport:0 "Skeletal Transport"
  NAME_Specter:0 "Specter"
- NAME_Subspace_Anomaly:0 "Subspace Anomaly"
+ NAME_Subspace_Anomaly:0 "ความผิดปกติของทางลัดอวกาศย่อย"
  NAME_Syzygy:0 "Syzygy"
  NAME_Unshrouded_Science_Ship:0 "Unshrouded Science Ship"
  NAME_Worm_in_Waiting:0 "Worm-in-Waiting"
