--- a/mod/thmod/localisation/english/necroids_l_english.yml
+++ b/mod/thmod/localisation/english/necroids_l_english.yml
@@ -198,7 +198,7 @@
  building_galactic_memorial_1_desc:0 "This humble memorial focuses thoughts and study upon the multi-faceted nature of death and endings."
  building_galactic_memorial_2:0 "เสาหลักของการดับสูญ"
  building_galactic_memorial_2_desc:0 "A solemn place dedicated to the contemplation of death, in which many an ending may be chronicled."
- building_galactic_memorial_3:0 "อนุสรณ์สถานกาแลกติก"
+ building_galactic_memorial_3:0 "อนุสรณ์สถานกาแล็กติก"
  building_galactic_memorial_3_desc:0 "A monumental library of all that may or may not be understood about endings, chronicled for unknowable future ages."
  building_galactic_memorial_regular_tooltip:1 "§YSanctuaries of Repose§! provide £job_death_chronicler£ $job_death_chronicler$ jobs, and improve §YGoverning Ethics Attraction§! on §HTomb Worlds§! and §HRelic Worlds§!"
  building_galactic_memorial_gestalt_tooltip:1 "§YSanctuaries of Repose§! provide £job_chronicle_drone£ $job_chronicle_drone$ jobs, and decrease §YDeviancy§! on §HTomb Worlds§! and §HRelic Worlds§!"
