--- a/mod/thmod/localisation/english/nemesis_custodian_l_english.yml
+++ b/mod/thmod/localisation/english/nemesis_custodian_l_english.yml
@@ -1,8 +1,8 @@
 ﻿l_english:
- IS_GALACTIC_CUSTODIAN:0 "$COUNTRY|Y$ เป็นผู้พิทักษ์กาแลกติก"
- IS_NOT_GALACTIC_CUSTODIAN:0 "$COUNTRY|Y$ ไม่เป็นผู้พิทักษ์กาแลกติก"
- SET_GALACTIC_CUSTODIAN:0 "$COUNTRY|Y$ จะเป็นผู้พิทักษ์กาแลกติก"
- UNSET_GALACTIC_CUSTODIAN:0 "$COUNTRY|Y$ จะหยุดเป็นผู้พิทักษ์กาแลกติก"
+ IS_GALACTIC_CUSTODIAN:0 "$COUNTRY|Y$ เป็นผู้พิทักษ์กาแล็กติก"
+ IS_NOT_GALACTIC_CUSTODIAN:0 "$COUNTRY|Y$ ไม่เป็นผู้พิทักษ์กาแล็กติก"
+ SET_GALACTIC_CUSTODIAN:0 "$COUNTRY|Y$ จะเป็นผู้พิทักษ์กาแล็กติก"
+ UNSET_GALACTIC_CUSTODIAN:0 "$COUNTRY|Y$ จะหยุดเป็นผู้พิทักษ์กาแล็กติก"
  HAS_GALACTIC_CUSTODIAN:0 "The galactic community has a Custodian"
  HAS_NO_GALACTIC_CUSTODIAN:0 "The galactic community has no Custodian"
  IS_GALACTIC_EMPEROR:1 "$COUNTRY|Y$ is the ruler of the Galactic Imperium"
@@ -30,7 +30,7 @@
  STRENGTHEN_UNDERMINE_EMPIRE_DELAYED:1 "§EEnvoys can openly criticize or support the Imperium and its policies in the Imperial Senate. This will increase or decrease §HImperial Authority§E over time, and will impact relations with the Imperium's ruler.§!§!§!"
  LEADER_STRENGTHEN_EMPIRE:1 "Strengthening the §HGalactic Imperium§!"
  LEADER_UNDERMINE_EMPIRE:1 "Undermining the §HGalactic Imperium§!"
- GALACTIC_EMPIRE:1 "จักรวรรดิกาแลกติก"
+ GALACTIC_EMPIRE:1 "จักรวรรดิกาแล็กติก"
  IMPERIAL_COUNCIL:0 "สภาจักรวรรดิ"
  IMPERIAL_COUNCIL_DESC:1 "§LThe members of the Imperial Council are the Imperium's Chosen. They have special resolution powers to help speed along the voting and proposing process§!"
  MESSAGE_ASK_TO_JOIN_GALACTIC_EMPIRE_TITLE:1 "Join Galactic Imperium Request"
@@ -44,9 +44,9 @@
  CANNOT_LEAVE_GALACTIC_EMPIRE_IS_EMPEROR:1 "§RThe ruler cannot leave the Galactic Imperium§!"
  JOIN_RECENTLY_LEFT_EMPIRE:1 "£trigger_no£ §RYou cannot join the Galactic Imperium after just having left it§!"
  JOIN_GALACTIC_EMPIRE:1 "§HAsk to Join the Galactic Imperium§!"
- JOIN_GALACTIC_COMMUNITY:0 "§Hเข้าร่วมประชาคมกาแลกติก§!"
+ JOIN_GALACTIC_COMMUNITY:0 "§Hเข้าร่วมประชาคมกาแล็กติก§!"
  LEAVE_GALACTIC_EMPIRE:1 "§HLeave the Galactic Imperium§!"
- LEAVE_GALACTIC_COMMUNITY:0 "§Hออกจากประชาคมกาแลกติก§!"
+ LEAVE_GALACTIC_COMMUNITY:0 "§Hออกจากประชาคมกาแล็กติก§!"
  CLICK_FOR_DIPLOMATIC_REQUEST:0 "§GClick to open diplomatic request§!"
  CLICK_TO_JOIN_EMPIRE_DESC:2 "§LThis will send a diplomatic request to the ruler of the Galactic Imperium.\nAs a member you will be on the ruler's good side and be able to influence decisions§!"
  END_SESSION:2 "£galcom_endsession£ End Session"
@@ -91,15 +91,15 @@
  RESOLUTION_FROZEN:0 "This Proposal is §Rfrozen§! and cannot be moved to the Senate floor for £time£ $DAYS|Y$"
  galactic_emperor:0 "Galactic Emperor"
  galactic_emperor_desc:0 ""
- galactic_custodian:0 "ผู้พิทักษ์กาแลกติก"
+ galactic_custodian:0 "ผู้พิทักษ์กาแล็กติก"
  galactic_custodian_desc:0 ""
- MESSAGE_JOINED_GALACTIC_EMPIRE_TITLE:1 "สมาชิกได้เข้าร่วมจักรวรรดิกาแลกติก"
+ MESSAGE_JOINED_GALACTIC_EMPIRE_TITLE:1 "สมาชิกได้เข้าร่วมจักรวรรดิกาแล็กติก"
  MESSAGE_LEFT_GALACTIC_EMPIRE_TITLE:1 "A member left the Galactic Imperium"
- MESSAGE_JOINED_GALACTIC_COMMUNITY_TITLE:0 "สมาชิกได้เข้าร่วมประชาคมกาแลกติก"
- MESSAGE_LEFT_GALACTIC_COMMUNITY_TITLE:0 "สมาชิกออกจากประชาคมกาแลกติก"
- MESSAGE_JOINED_GALACTIC_EMPIRE:1 "$MEMBER|Y$ ได้เข้าร่วมจักรวรรดิกาแลกติก"
+ MESSAGE_JOINED_GALACTIC_COMMUNITY_TITLE:0 "สมาชิกได้เข้าร่วมประชาคมกาแล็กติก"
+ MESSAGE_LEFT_GALACTIC_COMMUNITY_TITLE:0 "สมาชิกออกจากประชาคมกาแล็กติก"
+ MESSAGE_JOINED_GALACTIC_EMPIRE:1 "$MEMBER|Y$ ได้เข้าร่วมจักรวรรดิกาแล็กติก"
  MESSAGE_LEFT_GALACTIC_EMPIRE:1 "$MEMBER|Y$ has left the Galactic Imperium"
- MESSAGE_JOINED_GALACTIC_COMMUNITY:0 "$MEMBER|Y$ ได้เข้าร่วมประชาคมกาแลกติก"
+ MESSAGE_JOINED_GALACTIC_COMMUNITY:0 "$MEMBER|Y$ ได้เข้าร่วมประชาคมกาแล็กติก"
  MESSAGE_LEFT_GALACTIC_COMMUNITY:0 "$MEMBER|Y$ has left the Galactic Community"
  ACTION_ADD_IMPERIAL_COUNCIL_MEMBER_NOTIFICATION:1 "Their Imperial Majesty has decided that §H[Root.GetName]§! should have a seat in the Imperial Council"
  ACTION_REMOVE_IMPERIAL_COUNCIL_MEMBER_NOTIFICATION:1 "Their Imperial Majesty has kicked §H[Root.GetName]§! from the Imperial Council"
@@ -161,7 +161,7 @@
  YOUR_OWN:0 "your own"
  GDF:0 "GDF"
  IMPERIAL_AUTHORITY:0 "Imperial Authority"
- GALACTIC_FOCUS:0 "โฟกัสของกาแลกติก"
+ GALACTIC_FOCUS:0 "โฟกัสของกาแล็กติก"
  PROPOSE_RESOLUTION_GREETINGS_EMPIRE:1 "Glory to the Galactic Imperium!"
  CANCEL_RESOLUTION_DESC:0 "$RESOLUTION|H$ is canceled"
  custodian_remaining_term_time:1 "Once their term is up, the Custodian will revert to being a Galactic Council member."
