--- a/mod/thmod/localisation/english/nemesis_espionage_l_english.yml
+++ b/mod/thmod/localisation/english/nemesis_espionage_l_english.yml
@@ -154,7 +154,7 @@
  operation_spark_rebellion:1 "Imperium: Spark Rebellion"
  operation_spark_rebellion_desc:1 "The Galactic Imperium is hovering on the brink of open revolt. Our operatives will seize this opportunity and do everything in their power to trigger a galaxy-wide rebellion against the Imperium's tyrannical rule.\n\n§RThis operation will be terminated if Imperial Authority is above §Y80§! when a Phase concludes.§!"
  operation_spark_rebellion_on_success:0 "$IF_SUCCESSFUL|E$\nForm a Rebellion and declare war against the Galactic Imperium."
- MOD_ESPIONAGE_OPERATION_DIFFICULTY_ADD:0 "Operation Difficulty"
+ MOD_ESPIONAGE_OPERATION_DIFFICULTY_ADD:0 "ความยากของปฏิบัติการ"
  MOD_ESPIONAGE_OPERATION_DIFFICULTY_MULT:0 "$MOD_ESPIONAGE_OPERATION_DIFFICULTY_ADD$"
  MOD_ESPIONAGE_HOSTILE_OPERATION_DIFFICULTY_ADD:0 "ความยากของปฏิบัติการของศัตรู"
  MOD_ESPIONAGE_HOSTILE_OPERATION_DIFFICULTY_MULT:0 "$MOD_ESPIONAGE_HOSTILE_OPERATION_DIFFICULTY_ADD$"
@@ -162,7 +162,7 @@
  MOD_ESPIONAGE_OPERATION_COST_MULT:0 "$MOD_ESPIONAGE_OPERATION_COST_ADD$"
  MOD_ESPIONAGE_HOSTILE_OPERATION_COST_ADD:1 "จำเป็นต้องมีการแทรกซึมในปฏิบัติการของศัตรู"
  MOD_ESPIONAGE_HOSTILE_OPERATION_COST_MULT:0 "$MOD_ESPIONAGE_HOSTILE_OPERATION_COST_ADD$"
- MOD_ESPIONAGE_OPERATION_SKILL_ADD:0 "สกิลทักษะการปฏิบัติการ"
+ MOD_ESPIONAGE_OPERATION_SKILL_ADD:0 "สกิลปฏิบัติการ"
  MOD_ESPIONAGE_OPERATION_SKILL_MULT:0 "$MOD_ESPIONAGE_OPERATION_SKILL_ADD$"
  MOD_ESPIONAGE_OPERATION_SPEED_MULT:0 "ความเร็วปฏิบัติการ"
  MOD_ESPIONAGE_HOSTILE_OPERATION_UPKEEP_ADD:0 "ค่าบำรุงรักษาปฏิบัติการของศัตรู"
@@ -190,15 +190,15 @@
  mod_starbase_constructions_food_produces_mult:0 "£food£ อาหารจากสิ่งปลูกสร้างในฐานอวกาศ"
  mod_starbase_constructions_minerals_produces_mult:0 "£minerals£ แร่จากสิ่งปลูกสร้างในฐานอวกาศ"
  mod_starbase_constructions_energy_produces_mult:0 "£energy£ พลังงานจากสิ่งปลูกสร้างในฐานอวกาศ"
- mod_op_cat_subterfuge_difficulty_add:1 "Operation Difficulty ($op_cat_subterfuge$)"
- mod_op_cat_sabotage_difficulty_add:1 "Operation Difficulty ($op_cat_sabotage$)"
- mod_op_cat_manipulation_difficulty_add:1 "Operation Difficulty ($op_cat_manipulation$)"
- mod_op_cat_provocation_difficulty_add:1 "Operation Difficulty ($op_cat_provocation$)"
- mod_op_cat_government_difficulty_add:1 "Operation Difficulty ($op_cat_government$)"
- mod_op_cat_diplomacy_difficulty_add:1 "Operation Difficulty ($op_cat_diplomacy$)"
- mod_op_cat_economy_difficulty_add:1 "Operation Difficulty ($op_cat_economy$)"
- mod_op_cat_technology_difficulty_add:1 "Operation Difficulty ($op_cat_technology$)"
- mod_op_cat_military_difficulty_add:1 "Operation Difficulty ($op_cat_military$)"
+ mod_op_cat_subterfuge_difficulty_add:1 "ความยากของปฏิบัติการ ($op_cat_subterfuge$)"
+ mod_op_cat_sabotage_difficulty_add:1 "ความยากของปฏิบัติการ ($op_cat_sabotage$)"
+ mod_op_cat_manipulation_difficulty_add:1 "ความยากของปฏิบัติการ ($op_cat_manipulation$)"
+ mod_op_cat_provocation_difficulty_add:1 "ความยากของปฏิบัติการ ($op_cat_provocation$)"
+ mod_op_cat_government_difficulty_add:1 "ความยากของปฏิบัติการ ($op_cat_government$)"
+ mod_op_cat_diplomacy_difficulty_add:1 "ความยากของปฏิบัติการ ($op_cat_diplomacy$)"
+ mod_op_cat_economy_difficulty_add:1 "ความยากของปฏิบัติการ ($op_cat_economy$)"
+ mod_op_cat_technology_difficulty_add:1 "ความยากของปฏิบัติการ ($op_cat_technology$)"
+ mod_op_cat_military_difficulty_add:1 "ความยากของปฏิบัติการ ($op_cat_military$)"
  mod_hostile_op_cat_subterfuge_difficulty_add:0 "ความยากของปฏิบัติการของศัตรู ($op_cat_subterfuge$)"
  mod_hostile_op_cat_sabotage_difficulty_add:0 "ความยากของปฏิบัติการของศัตรู ($op_cat_sabotage$)"
  mod_hostile_op_cat_manipulation_difficulty_add:0 "ความยากของปฏิบัติการของศัตรู ($op_cat_manipulation$)"
@@ -209,15 +209,15 @@
  mod_hostile_op_cat_technology_difficulty_add:0 "ความยากของปฏิบัติการของศัตรู ($op_cat_technology$)"
  mod_hostile_op_cat_military_difficulty_add:0 "ความยากของปฏิบัติการของศัตรู ($op_cat_military$)"
  mod_hostile_operation_sabotage_starbase_difficulty_add:0 "ความยากของปฏิบัติการของศัตรู ($operation_sabotage_starbase$)"
- mod_op_cat_subterfuge_skill_add:1 "Operation Skill ($op_cat_subterfuge$)"
- mod_op_cat_sabotage_skill_add:1 "Operation Skill ($op_cat_sabotage$)"
- mod_op_cat_manipulation_skill_add:1 "Operation Skill ($op_cat_manipulation$)"
- mod_op_cat_provocation_skill_add:1 "Operation Skill ($op_cat_provocation$)"
- mod_op_cat_government_skill_add:1 "Operation Skill ($op_cat_government$)"
- mod_op_cat_diplomacy_skill_add:1 "Operation Skill ($op_cat_diplomacy$)"
- mod_op_cat_economy_skill_add:1 "Operation Skill ($op_cat_economy$)"
- mod_op_cat_technology_skill_add:1 "Operation Skill ($op_cat_technology$)"
- mod_op_cat_military_skill_add:1 "Operation Skill ($op_cat_military$)"
+ mod_op_cat_subterfuge_skill_add:1 "สกิลปฏิบัติการ ($op_cat_subterfuge$)"
+ mod_op_cat_sabotage_skill_add:1 "สกิลปฏิบัติการ ($op_cat_sabotage$)"
+ mod_op_cat_manipulation_skill_add:1 "สกิลปฏิบัติการ ($op_cat_manipulation$)"
+ mod_op_cat_provocation_skill_add:1 "สกิลปฏิบัติการ ($op_cat_provocation$)"
+ mod_op_cat_government_skill_add:1 "สกิลปฏิบัติการ ($op_cat_government$)"
+ mod_op_cat_diplomacy_skill_add:1 "สกิลปฏิบัติการ ($op_cat_diplomacy$)"
+ mod_op_cat_economy_skill_add:1 "สกิลปฏิบัติการ ($op_cat_economy$)"
+ mod_op_cat_technology_skill_add:1 "สกิลปฏิบัติการ ($op_cat_technology$)"
+ mod_op_cat_military_skill_add:1 "สกิลปฏิบัติการ ($op_cat_military$)"
  espionage_operation_roll_header:2 "§H$ARCHAEOLOGICAL_SITE_BREAKTHROUGH$§!\nThis reflects the chance of your operatives making a breakthrough during the current stage of their Operation.\n\nEvery time a phase ends, a die (§Y1§! to §Y10§!) is rolled. The result of the roll is added to §YSkill Bonus§! and §YInsights§!, then subtracted by §YDifficulty§!."
  espionage_operation_roll_extended_header:0 "$espionage_operation_roll_header$\n\n§ERoll Outcomes:§!"
  ESPIONAGE_OPERATION_ON_ROLL_FAILED_RANGE:1 "($CHANCE|%0Y$) Result is between $MIN|0Y$ and $MAX|0Y$. Adds $CLUES|0Y$ Insight(s)."
@@ -443,7 +443,7 @@
  STRING_ambassador_CAP:0 "Ambassador"
  STRING_fake_ambassador_CAP:0 ""Ambassador""
  STRING_envoy_location_name:0 "[This.envoy_location_country.GetName]"
- STRING_galcom:0 "ประชาคมกาแลกติก"
+ STRING_galcom:0 "ประชาคมกาแล็กติก"
  STRING_federation_name:0 "[This.Owner.Federation.GetName]"
  gestalts_are_boring:0 "The [This.GetName] lacks enough personality to become involved in scandals"
  saturated_with_scandals:2 "$TRIGGER_FAIL$The [Root.Target.GetName] have been saturated with scandals.\nWe may try again after §Y[Root.operation_diplomatic_incident_timer]§!"
