--- a/mod/thmod/localisation/english/nemesis_intel_l_english.yml
+++ b/mod/thmod/localisation/english/nemesis_intel_l_english.yml
@@ -93,7 +93,7 @@
  INTEL_INFO_intel_military_fleet_orders:0 "คำสั่งปัจจุบันของกองยานรบ"
  INTEL_INFO_intel_military_generals:0 "พลเอกที่ทำงาน"
  INTEL_INFO_intel_military_starbases:0 "ที่ตั้งของฐานอวกาศ"
- INTEL_INFO_galactic_community_vote_breakdown:0 "เหตุผลของการโหวตในประชาคมกาแลกติก"
+ INTEL_INFO_galactic_community_vote_breakdown:0 "เหตุผลของการโหวตในประชาคมกาแล็กติก"
  INTEL_INFO_intel_military_ai_prepare_war:0 "แผนการบุกใกล้เข้ามา"
  INTEL_INFO_resource_production:0 "การผลิตทรัพยากรของบริวาร"
  INTEL_INFO_specialist_subject_tier:0 "ระดับของผู้เชี่ยวชาญ"
@@ -138,9 +138,9 @@
  PACT_communications:0 "Communications"
  PACT_guarantee_independence:0 "Guaranteed Independence"
  PACT_non_aggression_pact:0 "Non-Aggression Pact"
- PACT_galactic_community:0 "ประชาคมกาแลกติก"
- PACT_galactic_custodian:0 "ผู้พิทักษ์กาแลกติก"
- PACT_galactic_emperor:0 "จักรพรรดิกาแลกติก"
+ PACT_galactic_community:0 "ประชาคมกาแล็กติก"
+ PACT_galactic_custodian:0 "ผู้พิทักษ์กาแล็กติก"
+ PACT_galactic_emperor:0 "จักรพรรดิกาแล็กติก"
  PACT_galactic_emperor_heightened_security:0 "ผู้รักษาความปลอดภัยสูงสุด"
  PACT_closed_borders:0 "Closed Borders"
  PACT_overlord:0 "เจ้าเหนือหัว"
