--- a/mod/thmod/localisation/english/pop_factions_l_english.yml
+++ b/mod/thmod/localisation/english/pop_factions_l_english.yml
@@ -156,7 +156,7 @@
  IMPERIALIST_RIVALS2:0 "การแข่งขันในพื้นที่ใกล้เคียง"
  IMPERIALIST_RIVALS_DESC2:1 "Positioning ourselves as the Rival of at least §Y2 Empires§! will please the [Root.GetName]."
  IMPERIALIST_FEW_RIVALS2:0 "$IMPERIALIST_RIVALS2$"
- IMPERIALIST_RIVALS3:0 "นักเลงแห่งกาแลกติก"
+ IMPERIALIST_RIVALS3:0 "นักเลงแห่งกาแล็กติก"
  IMPERIALIST_RIVALS_DESC3:1 "Positioning ourselves as the Rival of at least §Y3 Empires§! will please the [Root.GetName]."
  IMPERIALIST_FEW_RIVALS3:0 "$IMPERIALIST_RIVALS3$"
  IMPERIALIST_OVERLORD:0 "จักรวรรดิมหาอำนาจ"
@@ -312,7 +312,7 @@
  TECHNOLOGIST_ARCANA:0 "ความรู้ในอดีต"
  TECHNOLOGIST_NO_ARCANA:0 "$TECHNOLOGIST_ARCANA$"
  TECHNOLOGIST_ARCANA_DESC:0 "Studying Minor Artifacts will please the [Root.GetName] for a time."
- TECHNOLOGIST_PRECURSOR_SECRETS:0 "ความลับของผู้มาก่อน"
+ TECHNOLOGIST_PRECURSOR_SECRETS:0 "ความลับของจักรวรรดิแรกเริ่ม"
  TECHNOLOGIST_NO_PRECURSOR_SECRETS:0 "$TECHNOLOGIST_PRECURSOR_SECRETS$"
  TECHNOLOGIST_PRECURSOR_SECRETS_DESC:0 "Unraveling the ancient mysteries of the precursors will please the [Root.GetName]."
  PROGRESSIVE_NO_AUTO:0 "ต่อต้านเผด็จการ"
