--- a/mod/thmod/localisation/english/technology_l_english.yml
+++ b/mod/thmod/localisation/english/technology_l_english.yml
@@ -95,9 +95,9 @@
  tech_habitat_1_desc:0 "Allows the construction of largely self-sustaining Orbital Habitats."
  tech_solar_panel_network:0 "การแปลงพลังงานจากวงโคจร"
  tech_solar_panel_network_desc:1 "Advances in solar panel technology could offset the operating costs of our starbases. The panels would require an entire starbase module to generate enough energy, however."
- tech_mining_terminal:0 "Mining Guilds"
+ tech_mining_terminal:0 "สมาคมเหมืองแร่"
  tech_mining_terminal_desc:0 "Organized mining guilds that supervise all resource extraction in a system. This leads to increased efficiency, as independent "wildcat" miners are brought to heel."
- tech_zero_gravity_assembly_sequence:0 "Zero-G Work Frames"
+ tech_zero_gravity_assembly_sequence:0 "เฟรมงานที่แรงโน้มถ่วงเป็นศูนย์"
  tech_zero_gravity_assembly_sequence_desc:0 "These frames come equipped with a multitude of useful tools, enabling workers to quickly and safely navigate orbital construction sites. E.V.A. missions in space have never been easier."
  tech_strike_craft_1:0 "ปฏิบัติการของยานแม่"
  tech_strike_craft_1_desc:0 "These manned strike craft are launched from a mothership and rely on their speed and small size to survive long enough to punch through enemy defenses."
@@ -109,7 +109,7 @@
  tech_planetary_defenses_desc:0 "There may come a time when intellects, vast and cool and unsympathetic, regard our worlds with envy and draw plans against us. We must be ready."
  tech_assault_armies:0 "กองกำลังสำรวจระหว่างดาวเคราะห์"
  tech_assault_armies_desc:0 "The invasion of another world is a staggering enterprise. There are immense logistical challenges that must be overcome before we can muster our first interplanetary armies."
- tech_drop_pod:0 "Orbital Drop Pods"
+ tech_drop_pod:0 "ยานลงจอดผิวดาวดรอปพ็อด"
  tech_drop_pod_desc:0 "Single-use orbital drop pods will lessen our reliance on vulnerable landing craft and allow us to quickly land light forces anywhere on a planet's surface."
  tech_ship_armor_1:0 "วัสดุผสมระดับนาโน"
  tech_ship_armor_1_desc:0 "Reinforced nanocomposite hull plating can provide an extra layer of protection that could be the difference between life and death in a combat situation."
@@ -169,7 +169,7 @@
  tech_mining_2_desc:0 "These massive drills are needed to access the rich mineral deposits that can often be found close to a planet's core."
  tech_mining_3:0 "การแยกแร่"
  tech_mining_3_desc:1 "Advanced spectrometry combines with fracking techniques and chemical flushing to rapidly exploit shallow and mid-depth deposits."
- tech_synchronized_work_patterns:0 "Synchronized Work Patterns"
+ tech_synchronized_work_patterns:0 "รูปแบบการทำงานแบบซิงโครไนซ์"
  tech_synchronized_work_patterns_desc:0 "By synchronizing the work patterns of our mining networks, their output efficiency can be further increased."
  tech_engineering_1:0 "กลศาสตร์นาโน"
  tech_engineering_1_desc:0 "Advanced instrumentation allows for the study and practical application of physical systems at nanometric scales."
@@ -208,15 +208,15 @@
  tech_mega_assembly_desc:0 "Advanced templates allow us to drastically increase the assembly of new units."
  tech_space_construction:0 "การก่อสร้างนอกโลก"
  tech_space_construction_desc:0 "Construction in space presents our engineers with new design challenges that must be solved before we can build orbital stations above other worlds."
- tech_mining_station_improvement_1:0 "On-Site Processing"
+ tech_mining_station_improvement_1:0 "การแปรรูปแร่ที่สถานที่ขุด"
  tech_mining_station_improvement_1_desc:0 "By processing minerals directly above the world where they are extracted, our mining efficiency is substantially improved."
- tech_mining_station_improvement_2:0 "Autonomous Mining Operations"
+ tech_mining_station_improvement_2:0 "การทำเหมืองอัตโนมัติ"
  tech_mining_station_improvement_2_desc:0 "By relying extensively on automated drones, mining stations can be operated with only a small skeleton crew. This will lower their costs."
- tech_mine_satramene:0 "Satramene Refining"
+ tech_mine_satramene:0 "การสกัดซาทรามีน"
  tech_mine_satramene_desc:1 "This gas is a naturally occurring stimulant found on some worlds. It has a calming effect on most beings, and can be used as a non-violent way of pacifying hostile individuals."
- tech_mine_garanthium:0 "Garanthium Mining"
+ tech_mine_garanthium:0 "การทำเหมืองแร่กาแรนเทียม"
  tech_mine_garanthium_desc:1 "Establishing successful Garanthium quarries poses unique challenges, as the malleable qualities of the ore make it as difficult to mine as it is attractive."
- tech_mine_orillium:0 "Orillium Mining"
+ tech_mine_orillium:0 "การทำเหมืองแร่โอริลเลียม"
  tech_mine_orillium_desc:1 "Stabilization beams allow relatively safe extraction of volatile Orillium ores."
  tech_mine_living_metal:0 "โลหะมีชีวิต"
  tech_mine_living_metal_desc:0 "Mining and processing the rare living metals is exceedingly difficult, but successful application of the mutable alloys yields incomparable advantages."
@@ -224,8 +224,8 @@
  tech_mine_betharian_desc:0 "The Betharian minerals appear to have originated from singular source, but were scattered across the galaxy millennia ago. The minerals are most often encountered as pebble-sized clusters, and are highly flammable."
  tech_mine_rare_crystals:0 "การขุดผลึกหายาก"
  tech_mine_rare_crystals_desc:1 "Mining these crystals without damaging or even destroying them is an extremely delicate process. It requires advanced equipment capable of pinpoint precision."
- tech_aura_nanobot:0 "Nanobot Assemblers"
- tech_aura_minefield:0 "Proximity Mines"
+ tech_aura_nanobot:0 "การประกอบนาโนบอท"
+ tech_aura_minefield:0 "ทุ่นระเบิดระยะใกล้"
  tech_mega_engineering:0 "วิศวกรรมขนาดใหญ่"
  tech_mega_engineering_desc:1 "To complete construction projects of truly staggering scales we must first achieve a fundamental understanding of both the engineering and resource storage requirements for such megastructures."
  tech_mass_drivers_1:0 "เครื่องยิงด้วยการเหนี่ยวนำแม่เหล็กไฟฟ้า"
@@ -278,11 +278,11 @@
  tech_torpedoes_2_desc:0 "Upgraded space torpedoes encased in armor, to better withstand enemy point-defense fire. The armor fragments into shards that cause additional damage when the torpedo detonates."
  tech_torpedoes_3:0 "ตอร์ปิโดทำลายล้าง"
  tech_torpedoes_3_desc:0 "Advanced torpedoes with very powerful warheads. They have a sleeker design, faster engines and upgraded shield modulators for slipping through energy screens."
- tech_deep_scan:0 "Deep Scan Instruments"
+ tech_deep_scan:0 "เครื่องมือสแกนเชิงลึก"
  tech_deep_scan_desc:0 "Unused"
  tech_databank_uplinks:0 "การเชื่อมต่อคลังฐานข้อมูลขนาดมหึมา"
  tech_databank_uplinks_desc:0 "High-capacity quantum bands dedicated to databank transfers make possible virtually completely synchronous research operations across vast distances."
- tech_improved_databank_uplinks:0 "Uplink Miniaturization"
+ tech_improved_databank_uplinks:0 "การย่อขนาดอัปลิงก์"
  tech_improved_databank_uplinks_desc:0 "Miniaturization of the endpoint transmitters allow for installing them in clusters, further increasing bandwidth."
  tech_basic_science_lab_1:0 "วิธีการทางวิทยาศาสตร์"
  tech_basic_science_lab_1_desc:0 "Testable predictions of observable phenomena."
@@ -348,7 +348,7 @@
  tech_volatile_motes_desc:1 "Aside from the obvious safety concerns, the artificial creation of Volatile Motes is an extremely delicate and complicated process that requires highly specialized equipment."
  tech_rare_crystals:0 "การผลิตผลึกหายาก"
  tech_rare_crystals_desc:1 "The crystallization process is complicated and difficult, but synthetic crystals can be manufactured by using specialized industrial plants."
- tech_mine_neutronium:0 "Neutronium Extraction"
+ tech_mine_neutronium:0 "การสกัดนิวโตรเนียม"
  tech_mine_neutronium_desc:1 "Neutronium is a super-dense substance composed of neutrons that can be forged into extremely resistant and durable armor."
  tech_mine_dark_matter:0 "แผนผังสสารมืด"
  tech_mine_dark_matter_desc:1 "This exotic substance has many properties that seemingly defy the laws of physics. Harvestable concentrations can only be found near Black Holes or in certain nebulas."
@@ -394,11 +394,11 @@
  tech_psionic_barrier_desc:0 "These barriers are generated out of pure psychic energy by a cadre of psionic specialists. They will be able to stop some incoming fire, like our Energy deflector systems, but without the prohibitive power consumption."
  tech_sensors_2:0 "เซ็นเซอร์ความโน้มถ่วง"
  tech_sensors_2_desc:0 "These sensors have been tuned to look for any gravitational changes in space, such as those produced by the presence of a starship."
- tech_sensors_3:0 "เซนเซอร์ปริภูมิย่อย"
+ tech_sensors_3:0 "เซนเซอร์มิติย่อย(ทางลัดอวกาศ)"
  tech_sensors_3_desc:0 "Sensors that detect the subspace fluctuations left in the wake of traveling starships. Their sensitivity and range is greater than that of a gravitic sensor array."
  tech_sensors_4:0 "เซนเซอร์อนุภาคแทคีออน"
  tech_sensors_4_desc:0 "Advanced sensors that rely on rotating tachyon beams to detect ship movements even at extreme distances."
- tech_orbital_sensor_array:0 "Orbital Sensor Arrays"
+ tech_orbital_sensor_array:0 "แผงเซ็นเซอร์วงโคจร"
  tech_orbital_sensor_array_desc:0 "Powerful sensor arrays that can be added to the structure of orbital spaceports. They provide excellent sensor coverage of the surrounding region of space."
  tech_power_plant_1:0 "ตัวเก็บประจุพลังงานสูง"
  tech_power_plant_1_desc:0 "Capacitors capable of storing vast amounts of energy is one of the cornerstones for any modern civilization."
@@ -413,11 +413,11 @@
  tech_power_hub_1_desc:1 "Load-balancing facilities can greatly improve the stability of local grids and feed excess power back into centralized capacitors."
  tech_power_hub_2:0 "เครือข่ายพลังงานของดาวเคราะห์"
  tech_power_hub_2_desc:1 "A re-engineered and unified grid further reduces energy losses over distance."
- tech_wormhole_generation_1:0 "Subspace Wormholes"
+ tech_wormhole_generation_1:0 "ทางย่อยของรูหนอน"
  tech_wormhole_generation_1_desc:0 "By tunneling directly through subspace, a temporary conduit can be established between two different points in normal space. Travel between these points would be near instantaneous."
- tech_wormhole_generation_2:0 "Wormhole Calibration Matrix"
+ tech_wormhole_generation_2:0 "การทดสอบความถูกต้องของรูหนอน"
  tech_wormhole_generation_2_desc:0 "The creation of a stable wormhole takes time and requires massive amounts of energy, but the process can be streamlined with the use of special calibrators."
- tech_wormhole_generation_3:0 "Wormhole Containment Fields"
+ tech_wormhole_generation_3:0 "การควบคุมรูหนอน"
  tech_wormhole_generation_3_desc:0 "These containment fields allow for the creation of more powerful wormholes without the risk of triggering a sudden subspace energy cascade."
  tech_hyper_drive_1:0 "การเดินทางแบบไฮเปอร์สเปซ"
  tech_hyper_drive_1_desc:0 "Like the strands of a spider web, the extra-dimensional realm of hyperspace runs between the gravity wells of most stars. Faster than light travel is theoretically possible along these hyperlanes."
@@ -425,13 +425,13 @@
  tech_hyper_drive_2_desc:0 "We have identified the existence of points in space where a ship expends less energy to "breach" their way into a hyperlane. This will lead to a new generation of hyper drives."
  tech_hyper_drive_3:0 "ไฮเปอร์สเปซสลิปสตรีม"
  tech_hyper_drive_3_desc:0 "A new generation of hyper drives capable of accessing the subspace slipstreams that are present within hyperspace. This leads to dramatically improved drive performance."
- tech_hyperlane_mapping:0 "Hyperlane Mapping"
+ tech_hyperlane_mapping:0 "การทำแผนที่ไฮเปอร์เลน"
  tech_hyperlane_mapping_desc:0 "Although we do not travel through hyperspace, mapping the galaxy's extensive hyperlane network gives us a clear advantage against those who do."
  tech_warp_drive_1:0 "การเดินทางโดยการวาร์ป"
  tech_warp_drive_1_desc:0 "By enveloping a vessel in a warp field and forming a subspace bubble around it, velocities exceeding the speed of light are theoretically possible."
- tech_warp_drive_2:0 "Warp Field Stabilizers"
+ tech_warp_drive_2:0 "ตัวปรับความคงตัวของสนามวาร์ป"
  tech_warp_drive_2_desc:0 "Improved stabilization techniques for warp fields will enable our ships to travel farther while expending less energy."
- tech_warp_drive_3:0 "Warp Drive Ramscoops"
+ tech_warp_drive_3:0 "วาร์ปไดร์ฟแบบแรมสกู๊ปส์"
  tech_warp_drive_3_desc:0 "These revolutionary ramscoops are attached to warp drives and function as particle collectors, replenishing a starship's fuel supply."
  tech_jump_drive_1:0 "การขับเคลื่อนแบบกระโดดข้าม (จั้มไดร์ฟ)"
  tech_jump_drive_1_desc:1 "A groundbreaking technological marvel, the Jump Drive shreds the local space-time continuum and rearranges it on the quantum level to be identical to that of the target destination - and thus the ship appears to near-instantly "jump" from system to system."
@@ -443,7 +443,7 @@
  tech_gateway_activation_desc:0 "The ability to reactivate the derelict Gateway stations that can be found scattered throughout the galaxy has the potential to dramatically shorten travel times."
  tech_gateway_construction:0 "การก่อสร้างเกตเวย์"
  tech_gateway_construction_desc:0 "The construction of new Gateway stations enables us to build a fast-travel network that could revolutionize interstellar travel."
- tech_shield_recharge_aura_1:0 "Capacitor Fields"
+ tech_shield_recharge_aura_1:0 "สนามตัวเก็บประจุ"
  tech_shield_recharge_aura_1_desc:1 "Localized fields of charged particles can energize depleted shield capacitors."
  tech_aura_shield_dampener:0 "เครื่องลดโล่พลังงาน"
  tech_aura_quantum_destabilizer:1 "เครื่องที่ทำให้สนามควอนตัมไม่มั่นคง"
@@ -472,7 +472,7 @@
  tech_energy_lance_1_desc:1 "These heavy energy weapons fire focused particle beams that cause massive damage. The size of the emitter arrays limits their use to battleships and titans."
  tech_energy_lance_2:0 "หอกอนุภาคแทคีออน"
  tech_energy_lance_2_desc:1 "A more powerful version of the particle lance, this weapon fires a tachyon beam of immense power. Like its predecessor, its use is limited to battleships and titans."
- tech_perdition_beam:0 "Perdition Beam"
+ tech_perdition_beam:0 "ลำแสงนรก"
  tech_perdition_beam_desc:0 "A massive array of linked energy amplification conduits that fires a beam of unprecedented firepower. Its size means that it can only be fitted on Titan-class starships."
  tech_plasma_1:0 "เครื่องพ่นพลาสมา"
  tech_plasma_1_desc:0 "Weapons that eject destructive balls of high-energy plasma at targets. These plasma projectiles are extremely effective at eating through ship armor."
@@ -502,13 +502,13 @@
  tech_mining_drone_weapon_1_desc:1 "Using strong-focus lenses in combination with an oscillating firing frequence help create lasers strong enough to mine asteroids, or shoot down hostiles."
  tech_space_cloud_weapon_1:0 "ท่อนำสายฟ้า"
  tech_space_cloud_weapon_1_desc:1 "Void Clouds use the electrical charges generated by the dense gases that make up most of their core to release bolts of burning plasma. Using the same gas composition together with a specialized conduit allows for powerful lightning weaponry."
- tech_blue_crystal_weapon_1:0 "Blue Crystal Capacitors"
+ tech_blue_crystal_weapon_1:0 "ตัวเก็บประจุแบบคริสตัลฟ้า"
  tech_blue_crystal_weapon_1_desc:1 "Crystalline Entities store stellar raditation within their prismatic bodies and can focus it to emit laser-like beams. Using the sapphire type's prismatic pattern as a base we can construct laser capacitors that produce energy at a similar wavelength."
- tech_green_crystal_weapon_1:0 "Green Crystal Capacitors"
+ tech_green_crystal_weapon_1:0 "ตัวเก็บประจุแบบคริสตัลเขียว"
  tech_green_crystal_weapon_1_desc:1 "Crystalline Entities store stellar raditation within their prismatic bodies and can focus it to emit laser-like beams. Using the emerald type's prismatic pattern as a base we can construct laser capacitors that produce energy at a similar wavelength."
- tech_yellow_crystal_weapon_1:0 "Yellow Crystal Capacitors"
+ tech_yellow_crystal_weapon_1:0 "ตัวเก็บประจุแบบคริสตัลเหลือง"
  tech_yellow_crystal_weapon_1_desc:1 "Crystalline Entities store stellar raditation within their prismatic bodies and can focus it to emit laser-like beams. Using the topaz type's prismatic pattern as a base we can construct laser capacitors that produce energy at a similar wavelength."
- tech_red_crystal_weapon_1:0 "Red Crystal Capacitors"
+ tech_red_crystal_weapon_1:0 "ตัวเก็บประจุแบบคริสตัลแดง"
  tech_red_crystal_weapon_1_desc:1 "Crystalline Entities store stellar raditation within their prismatic bodies and can focus it to emit laser-like beams. Using the ruby type's prismatic pattern as a base we can construct laser capacitors that produce energy at a similar wavelength."
  tech_hydroponics:0 "การปลูกพืชไร้ดิน"
  tech_hydroponics_desc:0 "Hydroponics Farming in a controlled environment allows for crops to be grown in climates where farming would normally be impossible."
@@ -563,7 +563,7 @@
  tech_xeno_ecology_1:0 "Xeno Ecology Subjugation"
  tech_xeno_ecology_2:0 "Environmental Control"
  tech_reveal_luxuries_1:0 "เศรษฐกิจระหว่างดวงดาว"
- tech_reveal_luxuries_2:0 "ตลาดกาแลกติก"
+ tech_reveal_luxuries_2:0 "ตลาดกาแล็กติก"
  tech_orbital_hydroponics:0 "Orbital Hydroponics"
  tech_orbital_hydroponics_desc:1 "The challenges inherent in cultivating crops in zero-G are fairly unique, but far from insurmountable."
  tech_arctic_colonization:0 "Arctic Colonization"
@@ -730,11 +730,11 @@
  tech_effective_bureaucracy_desc:0 "Improved algorithms for processing and organizing vast amounts of data has streamlined decision-making and information-sharing throughout the empire."
  tech_colonial_bureaucracy:0 "ระบบราชการอาณานิคม"
  tech_colonial_bureaucracy_desc:0 "Local administrative developments allow for closer supervision of colonial affairs without excessively burdening central decision-making."
- tech_galactic_bureaucracy:0 "ระบบราชการกาแลกติก"
+ tech_galactic_bureaucracy:0 "ระบบราชการกาแล็กติก"
  tech_galactic_bureaucracy_desc:0 "Multiple administrative strata efficiently surface only the most vital information to the upper levels of government."
  tech_colonial_centralization:0 "การรวมศูนย์อำนาจอาณานิคม"
  tech_colonial_centralization_desc:1 "Robust frameworks for local governance created on a per-case basis, to meet each colony's needs."
- tech_galactic_administration:0 "การบริหารกาแลกติก"
+ tech_galactic_administration:0 "การบริหารกาแล็กติก"
  tech_galactic_administration_desc:1 "The administrative needs of a star empire are as numerous as they are complex. We will rise to the occasion."
  tech_living_state:0 "สภาพชีวิต"
  tech_living_state_desc:1 "The Empire lives, the Empire breathes. We may make up its body, but it is not for the left hand to know what the right hand is doing."
@@ -756,7 +756,7 @@
  tech_virtual_combat_arena_desc:1 "The advent of accurate pain emulators will at long last bridge the divide between the virtual and the real."
  tech_purity_campaigns:0 "Purity Campaigns"
  tech_purity_campaigns_desc:1 "A celebration of purity, perhaps of spirit, or of the body, or purpose - dependent on whatever goal we have in mind."
- tech_galactic_markets:0 "ตลาดกาแลกติก"
+ tech_galactic_markets:0 "ตลาดกาแล็กติก"
  tech_galactic_markets_desc:1 "$building_galactic_stock_exchange_desc$"
  tech_symbol_unity:0 "Symbols of Unity"
  tech_symbol_unity_desc:0 "As we explore more of the galaxy and its wonders, it becomes increasingly important for us to reaffirm our beliefs and to unify our people under one symbol."
