--- a/mod/thmod/localisation/english/traditions_l_english.yml
+++ b/mod/thmod/localisation/english/traditions_l_english.yml
@@ -72,7 +72,7 @@
  tr_expansion_reach_for_the_stars_machine_delayed:0 "The massive distances inherent to space exploration cause bandwidth loss between our core and peripheral systems. Signal boosting relay stations will ensure that directives from the core are received undisrupted."
  tr_expansion_reach_for_the_stars_hive:0 "ไซแนปส์อะมีบา"
  tr_expansion_reach_for_the_stars_hive_delayed:0 "Encasing synapses in a miniature hyperdrive shell, hardened for spaceflight, and using them to pass on directives from the hive has allowed us to conquer the stars."
- tr_expansion_galactic_ambition:0 "ความทะเยอทะยานกาแลกติก"
+ tr_expansion_galactic_ambition:0 "ความทะเยอทะยานกาแล็กติก"
  tr_expansion_galactic_ambition_desc:7 "§Y$mod_starbases_upkeep_mult$§! ลดลง §G20%§!"
  tr_expansion_galactic_ambition_delayed:0 "The banner of our great empire will one day be as common as hydrogen throughout the galaxy."
  tr_expansion_galactic_ambition_machine:0 "ความฝันในเครื่องจักร"
@@ -295,7 +295,7 @@
  tr_adaptability_appropriation_delayed:0 "Land that is not being worked contributes nothing to our empire. Workers must be relocated in an efficient manner to those planets where they are needed most."
  tr_adaptability_finish:0 "วัฒนธรรมการปรับตัวสำเร็จ"
  tr_adaptability_finish_desc:0 "ปลดล็อกการตัดสินใจ §Y$decision_prospect$§! ซึ่งช่วยให้เรามีโอกาสได้รับทรัพยากรเพิ่มเติม(หนึ่งอย่าง)ในดาวเคราะห์ของเรา\nปลดล็อกการยกระดับ: §G+1§!"
- tr_adaptability_void_finish_desc:0 "ปลดล็อกการตัดสินใจ §Y$decision_prospect_void$§! ซึ่งช่วยให้เรามีโอกาสได้รับทรัพยากรเพิ่มเติมในวงโคจรรอบๆที่อยู่อาศัยในอวกาศของเรา\nปลดล็อกการยกระดับ: §G+1§!"
+ tr_adaptability_void_finish_desc:0 "ปลดล็อกการตัดสินใจ §Y$decision_prospect_void$§! ซึ่งช่วยให้เราสามารถหาทรัพยากรเพิ่มเติมในวงโคจรของแหล่งที่อยู่อาศัยในอวกาศของเราได้\nปลดล็อกการยกระดับ: §G+1§!"
  decision_prospect_void:0 "การสำรวจวงโคจร"
  decision_prospect_void_short:0 "Allows construction of an additional random §YDistrict§! type on the habitat."
  decision_prospect_void_desc:0 "Extensive surveying and prospecting within the habitat's orbit will let us uncover the presence of natural resources that may otherwise have eluded us."
@@ -573,14 +573,14 @@
  ap_consecrated_worlds:0 "โลกศักดิ์สิทธิ์"
  ap_executive_vigor:0 "อำนาจบริหาร"
  ap_executive_vigor_desc:0 "จะไม่มีมาตรการครึ่งๆกลางๆหรือการประนีประนอมเมื่อต้องดำเนินการตามคำสั่งที่ตัดสินใจโดยรัฐบาลของเรา เราไปทุกทางที่เป็นไปได้หรือไม่ไปเลยก็ได้"
- ap_galactic_force_projection:0 "การวางแผนกองกำลังกาแลกติก"
+ ap_galactic_force_projection:0 "การวางแผนกองกำลังกาแล็กติก"
  ap_defender_of_the_galaxy:0 "ผู้พิทักษ์ดาราจักร"
- ap_galactic_contender:0 "คู่ต่อสู้กาแลกติก"
+ ap_galactic_contender:0 "คู่ต่อสู้กาแล็กติก"
  ap_technological_ascendancy:0 "อำนาจวาสนาทางเทคโนโลยี"
  ap_mastery_of_nature:0 "ความเชี่ยวชาญในธรรมชาติ"
  ap_voidborn:0 "ลอยในอวกาศ"
  ap_the_circle_of_life:0 "วิถีแห่งชีวิต"
- ap_galactic_wonders:0 "สิ่งมหัศจรรย์แห่งกาแลกติก"
+ ap_galactic_wonders:0 "สิ่งมหัศจรรย์แห่งกาแล็กติก"
  ap_interstellar_dominion:0 "การปกครองระหว่างดวงดาว"
  ap_eternal_vigilance:0 "การเฝ้าระวังชั่วนิรันดร์"
  ap_eternal_vigilance_desc:0 "การแสดงถึงความอ่อนแอคือการเชิญชวนการโจมตี ราคาที่ต้องจ่ายในการบุกรุกพื้นที่ของเราจะต้องสูงมากเท่าที่จะเป็นไปได้"
