--- a/mod/thmod/localisation/english/triggers_effects_l_english.yml
+++ b/mod/thmod/localisation/english/triggers_effects_l_english.yml
@@ -207,8 +207,8 @@
  IS_NOT_PRIMITIVE:0 "Is NOT primitive"
  IS_PIRATE:0 "Is Pirate"
  IS_NOT_PIRATE:0 "Is NOT Pirate"
- IS_INSIDE_NEBULA:0 "Is inside a nebula"
- IS_NOT_INSIDE_NEBULA:0 "Is NOT inside a nebula"
+ IS_INSIDE_NEBULA:0 "อยู่ภายในเนบิวลา"
+ IS_NOT_INSIDE_NEBULA:0 "ไม่อยู่ภายในเนบิวลา"
  IS_IN_FRONTIER_SPACE:0 "Is in frontier space"
  IS_NOT_IN_FRONTIER_SPACE:0 "Is NOT in frontier space"
  IS_INSIDE_BORDER:0 "Is inside the border of §Y$OTHER$§!"
@@ -1764,7 +1764,7 @@
  COMPLETE_CRISIS_OBJECTIVE:3 "The $OBJ|Y$ crisis objective is completed, granting $REWARD|G$ Menace."
  DEACTIVATE_MENACE_PERK:0 "The Menace Perk $PERK$ was deactivated for $COUNTRY$"
  ACTIVATE_CRISIS_PROGRESSION:1 "ทำให้ $COUNTRY$ สามารถก้าวไปสู่ §Yการเป็น §Rไครซิส§!§!"
- CREATE_NEBULA_EFFECT:0 "A Nebula is created in the $SYSTEM|Y$ system"
+ CREATE_NEBULA_EFFECT:0 "เนบิวลาถูกสร้างขึ้นในระบบดาว $SYSTEM|Y$"
  ADD_VICTORY_SCORE_EFFECT:0 "$VALUE$ is added to the Victory Score of $COUNTRY|Y$"
  HAS_CRISIS_LEVEL_TRIGGER:0 "Has Crisis Level: $LEVEL|Y$"
  HAS_NOT_CRISIS_LEVEL_TRIGGER:0 "Does not have Crisis Level: $LEVEL|Y$"
