--- a/mod/thmod/localisation/english/overlord_mega_l_english.yml
+++ b/mod/thmod/localisation/english/overlord_mega_l_english.yml
@@ -49,7 +49,7 @@
  FLEET_ORDER_NO_QUANTUM_CATAPULT_IN:0 "§RNo functioning Quantum Catapult in $SYSTEM|H$§!"
  FLEET_ORDER_QUANTUM_CATAPULT_NOT_SAME_SYSTEM:0 "§RSelected fleets are not in the same system§!"
  FLEET_ORDER_NEEDS_GALAXY_MODE:0 "§RCan only be engaged in galaxy view!§!"
- requires_technology_hyper_relays:0 "$TRIGGER_FAIL$Requires technology £physics£ §Y$tech_hyper_relays$§!."
+ requires_technology_hyper_relays:0 "$TRIGGER_FAIL$ต้องใช้เทคโนโลยี £physics£ §Y$tech_hyper_relays$§!"
  requires_hyperlane:0 "$TRIGGER_FAIL$§RThis system does not have any Hyperlanes.§!"
  QUANTUM_CATAPULT_COUNTRY_CANNOT_USE:0 "$TRIGGER_FAIL$ The §Y[From.GetName]§! has denied us access to their Quantum Catapult."
  quantum_catapult_ruined_slingshot:0 "$quantum_catapult_ruined$"
@@ -77,7 +77,7 @@
  orbital_ring:0 "สถานีอวกาศวงแหวนโคจร"
  orbital_ring_DESC:0 "$orbital_ring_tier_1_DESC$"
  orbital_ring_MEGASTRUCTURE_DETAILS:0 "$orbital_ring_tier_1_MEGASTRUCTURE_DETAILS$"
- orbital_ring_ruined:0 "Orbital Ring (พังเสียหาย)"
+ orbital_ring_ruined:0 "สถานีอวกาศวงแหวนโคจร (พังเสียหาย)"
  orbital_ring_ruined_DESC:0 "This ring once encircled the planet, providing various defensive and infrastructural advantages. Damage and age have left it structurally unsound, and it's a bit of a miracle that any of it remains at all."
  orbital_ring_ruined_MEGASTRUCTURE_DETAILS:0 "$orbital_ring_tier_1_MEGASTRUCTURE_DETAILS$"
  orbital_ring_restored:0 "$orbital_ring$"
@@ -114,7 +114,7 @@
  mod_relay_bypass_windup_empire_mult:1 "Reduced delays to transit speed through $hyper_relay_plural$"
  mod_relay_bypass_windup_ship_mult:1 "$mod_relay_bypass_windup_empire_mult$"
  MOD_COUNTRY_MIA_TIME_MULT:1 "Reduced time spent Missing In Action while we own $hyper_relay_plural$"
- OPEN_ORBITAL_RING:0 "Open Orbital Ring"
+ OPEN_ORBITAL_RING:0 "เปิดสถานีอวกาศวงแหวนโคจร"
  OPEN_PLANET_VIEW:0 "Open Planet View"
  sm_ring_energy_hub:0 "Stratospheric Ionization Elements"
  sm_ring_energy_hub_desc:1 "These devices dramatically reduce power loss during distribution, increasing overall generator output."
